@@ -22,7 +22,6 @@ import org.openrewrite.tree.ParseError;
 import org.openrewrite.tree.ParsingExecutionContextView;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import static java.nio.charset.StandardCharsets.ISO_8859_1;
 import static org.assertj.core.api.Assertions.assertThat;
@@ -69,7 +68,7 @@ class ParserTest implements RewriteTest {
           DIFF HERE
           line 2
           """;
-        Path path = Paths.get("1.txt");
+        Path path = Path.of("1.txt");
         String expectedDiff = """
           --- a/1.txt
           +++ b/1.txt
@@ -81,7 +80,7 @@ class ParserTest implements RewriteTest {
 
         Parser.Input input1 = Parser.Input.fromString(path, before);
         Parser.Input input2 = Parser.Input.fromString(path, after);
-        SourceFile s1 = parser.parse(input1.getSource(ctx).readFully()).toList().get(0);
+        SourceFile s1 = parser.parse(input1.getSource(ctx).readFully()).toList().getFirst();
         SourceFile out = parser.requirePrintEqualsInput(s1, input2, null, ctx);
         assertThat(out).isInstanceOf(ParseError.class);
         ParseExceptionResult parseExceptionResult = out.getMarkers().findFirst(ParseExceptionResult.class).get();
