@@ -18,7 +18,6 @@ package org.openrewrite;
 import org.junit.jupiter.api.Test;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.openrewrite.PathUtils.matchesGlob;
@@ -37,10 +36,14 @@ class PathUtilsTest {
         assertThat(matchesGlob(path("a\\b\\c"), "a/b/c")).isTrue();
         assertThat(matchesGlob(path("/test"), "/test")).isTrue();
         assertThat(matchesGlob(path("test"), "/test")).isFalse();
+        assertThat(matchesGlob(path("a/test"), "/test")).isFalse();
+        assertThat(matchesGlob(path("a/b/test"), "/test")).isFalse();
         assertThat(matchesGlob(path("/test"), "test")).isFalse();
         assertThat(matchesGlob(path("test/"), "test/")).isFalse(); // Trailing slash on path is not maintained
         assertThat(matchesGlob(path("test"), "test/")).isFalse();
         assertThat(matchesGlob(path("test/"), "test")).isTrue(); // Trailing slash on path is not maintained
+        assertThat(matchesGlob(path("filename.ext"), "filename.ext")).isTrue();
+        assertThat(matchesGlob(path("a/filename.ext"), "filename.ext")).isFalse();
 
         // matches with ?'s
         assertThat(matchesGlob(path("/test"), "/t?st")).isTrue();
@@ -135,7 +138,27 @@ class PathUtilsTest {
         assertThat(matchesGlob(path("d/xml"), "!(a|b|c)/{java,txt}")).isFalse();
     }
 
+    @Test
+    void stringGlobMatching() {
+        // Test the string version directly to avoid Path creation issues on Windows
+        assertThat(matchesGlob("a", "a")).isTrue();
+        assertThat(matchesGlob("a/b/c", "a/b/c")).isTrue();
+        assertThat(matchesGlob("a\\b\\c", "a\\b\\c")).isTrue();
+        assertThat(matchesGlob("a/b/c", "a\\b\\c")).isTrue();
+        assertThat(matchesGlob("a\\b\\c", "a/b/c")).isTrue();
+        assertThat(matchesGlob("*.tmp", "*.tmp")).isTrue();
+        assertThat(matchesGlob("file.tmp", "*.tmp")).isTrue();
+        assertThat(matchesGlob("dir/file.tmp", "**/file.tmp")).isTrue();
+        assertThat(matchesGlob("build/", "build/**")).isTrue();
+        assertThat(matchesGlob("build/output", "build/**")).isTrue();
+
+        // Test null handling
+        assertThat(matchesGlob((String) null, "a")).isFalse();
+        assertThat(matchesGlob("a", null)).isFalse();
+        assertThat(matchesGlob((String) null, null)).isFalse();
+    }
+
     private static Path path(String path) {
-        return Paths.get(path);
+        return Path.of(path);
     }
 }
