@@ -15,20 +15,21 @@
  */
 package org.openrewrite;
 
-import com.fasterxml.jackson.databind.JsonMappingException;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import org.junit.jupiter.api.Test;
 import org.openrewrite.config.RecipeDescriptor;
 import org.openrewrite.text.ChangeText;
 
 import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
 class RecipeBasicsTest {
 
     @Test
-    void cloneRecipe() throws JsonMappingException {
+    void cloneRecipe() throws Exception {
         ChangeText ct = new ChangeText("hi");
         ChangeText ct2 = (ChangeText) ct.clone();
         ObjectMapper mapper = new ObjectMapper();
@@ -80,7 +81,7 @@ class RecipeBasicsTest {
     @Test
     void subclassExposesOptionsViaMethod() {
         RecipeDescriptor d = new ExtendingRecipe("option").createRecipeDescriptor();
-        assertThat(d.getOptions().get(0).getDisplayName()).isEqualTo("Option");
+        assertThat(d.getOptions().getFirst().getDisplayName()).isEqualTo("Option");
     }
 
     static class RecipeWithConstructorParameter extends Recipe {
@@ -104,6 +105,41 @@ class RecipeBasicsTest {
     @Test
     void optionExposedViaConstructorParameter() {
         RecipeDescriptor d = new RecipeWithConstructorParameter("option").createRecipeDescriptor();
-        assertThat(d.getOptions().get(0).getDisplayName()).isEqualTo("Option");
+        assertThat(d.getOptions().getFirst().getDisplayName()).isEqualTo("Option");
+    }
+
+    static class RecipeWithListOption extends Recipe {
+        @Option(displayName = "Field names", description = "Field names.", example = "firstName,lastName")
+        List<String> fieldNames;
+
+        public RecipeWithListOption(List<String> fieldNames) {
+            this.fieldNames = fieldNames;
+        }
+
+        @Override
+        public String getDisplayName() {
+            return "Recipe with list option";
+        }
+
+        @Override
+        public String getDescription() {
+            return "Recipe with list option.";
+        }
+    }
+
+    @Test
+    void withOptionsDeserializesCommaSeparatedStringToList() {
+        // given
+        RecipeWithListOption recipe = new RecipeWithListOption(List.of());
+        Map<String, Object> options = new HashMap<>();
+        options.put("fieldNames", "firstName,lastName,email,emailAddress");
+
+        // when
+        Recipe result = recipe.withOptions(options);
+
+        // then
+        assertThat(result).isInstanceOf(RecipeWithListOption.class);
+        assertThat(((RecipeWithListOption) result).fieldNames)
+                .containsExactly("firstName", "lastName", "email", "emailAddress");
     }
 }
