@@ -38,6 +38,30 @@ import static org.openrewrite.groovy.Assertions.groovy;
 @SuppressWarnings({"GroovyUnusedAssignment", "GrUnnecessaryPublicModifier", "ConstantConditions", "GrMethodMayBeStatic"})
 class GroovyTypeAttributionTest implements RewriteTest {
 
+    @DocumentExample
+    @Test
+    void typeFromClasspathResources() {
+        rewriteRun(
+          spec -> spec.recipe(new FindTypes("org.junit.jupiter.api.Test", null))
+            .parser(GroovyParser.builder()
+                .classpathFromResource(new InMemoryExecutionContext(), "junit-jupiter-api-5.+")),
+          groovy(
+                """
+            import org.junit.jupiter.api.Test
+            class A {
+                Test t
+            }
+            """,
+            """
+            import org.junit.jupiter.api.Test
+            class A {
+                /*~~>*/Test t
+            }
+            """
+          )
+        );
+    }
+
     @Test
     void defTypeAttributed() {
         rewriteRun(
@@ -97,7 +121,7 @@ class GroovyTypeAttributionTest implements RewriteTest {
                 assertThat(m.getArguments()).hasSize(3);
                 assertThat(m.getArguments().get(2)).isInstanceOf(J.Lambda.class);
                 var it = (J.MethodInvocation) ((J.Return) ((J.Block) ((J.Lambda) m.getArguments().get(2)).getBody())
-                  .getStatements().get(0)).getExpression();
+                  .getStatements().getFirst()).getExpression();
                 assertThat(TypeUtils.asFullyQualified(it.getSelect().getType()).getFullyQualifiedName()).isEqualTo("java.lang.String");
                 assertThat(it.getMethodType().getName()).isEqualTo("substring");
                 assertThat(it.getMethodType().getDeclaringType().getFullyQualifiedName()).isEqualTo("java.lang.String");
@@ -123,7 +147,7 @@ class GroovyTypeAttributionTest implements RewriteTest {
                 assertThat(m.getArguments()).hasSize(3);
                 assertThat(m.getArguments().get(2)).isInstanceOf(J.Lambda.class);
                 var it = (J.MethodInvocation) ((J.Return) ((J.Block) ((J.Lambda) m.getArguments().get(2)).getBody())
-                  .getStatements().get(0)).getExpression();
+                  .getStatements().getFirst()).getExpression();
                 assertThat(TypeUtils.asFullyQualified(it.getSelect().getType()).getFullyQualifiedName()).isEqualTo("java.lang.Integer");
                 assertThat(it.getMethodType().getName()).isEqualTo("byteValue");
                 assertThat(it.getMethodType().getDeclaringType().getFullyQualifiedName()).isEqualTo("java.lang.Integer");
@@ -148,7 +172,7 @@ class GroovyTypeAttributionTest implements RewriteTest {
                 var m = (J.MethodInvocation) cu.getStatements().get(1);
                 assertThat(m.getArguments()).hasSize(3);
                 assertThat(m.getArguments().get(2)).isInstanceOf(J.Lambda.class);
-                var foo = (J.Identifier) ((G.ExpressionStatement) ((J.Return) ((J.Block) ((J.Lambda) m.getArguments().get(2)).getBody()).getStatements().get(0))
+                var foo = (J.Identifier) ((G.ExpressionStatement) ((J.Return) ((J.Block) ((J.Lambda) m.getArguments().get(2)).getBody()).getStatements().getFirst())
                   .getExpression()).getExpression();
                 assertThat(TypeUtils.asFullyQualified(foo.getType()).getFullyQualifiedName()).isEqualTo("java.lang.String");
             })
@@ -171,8 +195,8 @@ class GroovyTypeAttributionTest implements RewriteTest {
             spec -> spec.afterRecipe(cu -> {
                 var m = (J.MethodInvocation) cu.getStatements().get(1);
                 assertThat(m.getArguments()).hasSize(1);
-                assertThat(m.getArguments().get(0)).isInstanceOf(J.Lambda.class);
-                var substring = (J.MethodInvocation) ((J.Return) ((J.Block) ((J.Lambda) m.getArguments().get(0)).getBody()).getStatements().get(0)).getExpression();
+                assertThat(m.getArguments().getFirst()).isInstanceOf(J.Lambda.class);
+                var substring = (J.MethodInvocation) ((J.Return) ((J.Block) ((J.Lambda) m.getArguments().getFirst()).getBody()).getStatements().getFirst()).getExpression();
                 assertThat(substring.getMethodType().getName()).isEqualTo("substring");
                 assertThat(substring.getMethodType().getDeclaringType().getFullyQualifiedName()).isEqualTo("java.lang.String");
             })
@@ -180,15 +204,15 @@ class GroovyTypeAttributionTest implements RewriteTest {
         );
     }
 
-    @SuppressWarnings({"GrPackage", "OptionalGetWithoutIsPresent"})
     @ExpectedToFail
+    @SuppressWarnings({"GrPackage", "OptionalGetWithoutIsPresent"})
     @Test
     void infersDelegateViaSimilarGradleApi() {
         rewriteRun(
           groovy(
                 """
               package org.gradle.api
-              
+
               interface Action<T> {
                   void execute(T t);
               }
@@ -206,8 +230,8 @@ class GroovyTypeAttributionTest implements RewriteTest {
                   .findFirst()
                   .get();
                 assertThat(m.getArguments()).hasSize(1);
-                assertThat(m.getArguments().get(0)).isInstanceOf(J.Lambda.class);
-                var substring = (J.MethodInvocation) ((J.Return) ((J.Block) ((J.Lambda) m.getArguments().get(0)).getBody()).getStatements().get(0)).getExpression();
+                assertThat(m.getArguments().getFirst()).isInstanceOf(J.Lambda.class);
+                var substring = (J.MethodInvocation) ((J.Return) ((J.Block) ((J.Lambda) m.getArguments().getFirst()).getBody()).getStatements().getFirst()).getExpression();
                 assertThat(substring.getMethodType().getName()).isEqualTo("substring");
                 assertThat(substring.getMethodType().getDeclaringType().getFullyQualifiedName()).isEqualTo("java.lang.String");
             })
@@ -215,33 +239,10 @@ class GroovyTypeAttributionTest implements RewriteTest {
         );
     }
 
-    @DocumentExample
-    @Test
-    void typeFromClasspathResources() {
-        rewriteRun(
-          spec -> spec.recipe(new FindTypes("org.junit.jupiter.api.Test", null))
-            .parser(GroovyParser.builder()
-                .classpathFromResource(new InMemoryExecutionContext(), "junit-jupiter-api-5.+")),
-          groovy(
-                """
-            import org.junit.jupiter.api.Test
-            class A {
-                Test t
-            }
-            """,
-            """
-            import org.junit.jupiter.api.Test
-            class A {
-                /*~~>*/Test t
-            }
-            """)
-        );
-    }
-
     private Consumer<SourceSpec<G.CompilationUnit>> isAttributed(boolean attributed) {
         return spec -> spec.afterRecipe(cu -> new JavaVisitor<Integer>() {
-            @SuppressWarnings("ConstantConditions")
             @Override
+            @SuppressWarnings("ConstantConditions")
             public J visitVariable(J.VariableDeclarations.NamedVariable variable, Integer integer) {
                 assertThat(TypeUtils.asFullyQualified(variable.getVariableType().getType())
                   .getFullyQualifiedName())
