@@ -195,9 +195,10 @@ class LiteralTest implements RewriteTest {
     void gStringMultiPropertyAccess() {
         rewriteRun(
           groovy(
-                """
-            "$System.env.BAR_BAZ"
-            """)
+            """
+              "$System.env.BAR_BAZ"
+              """
+          )
         );
     }
 
@@ -205,9 +206,10 @@ class LiteralTest implements RewriteTest {
     void emptyGString() {
         rewriteRun(
           groovy(
-                """
-            "${}"
-            """)
+            """
+              "${}"
+              """
+          )
         );
     }
 
@@ -215,9 +217,10 @@ class LiteralTest implements RewriteTest {
     void nestedGString() {
         rewriteRun(
           groovy(
-                """
-            " ${ " ${ " " } " } "
-            """)
+            """
+              " ${ " ${ " " } " } "
+              """
+          )
         );
     }
 
@@ -225,9 +228,10 @@ class LiteralTest implements RewriteTest {
     void gStringInterpolateString() {
         rewriteRun(
           groovy(
-                """
-            " ${""}\\n${" "} "
-            """)
+            """
+              " ${""}\\n${" "} "
+              """
+          )
         );
     }
 
@@ -292,9 +296,41 @@ class LiteralTest implements RewriteTest {
           groovy(
             """
               float a = 0.1
-              def b = 0.1f
-              double c = 1.0d
-              long d = 1L
+              def b = 0.10f
+              def c = -0.10f
+              double d = 1.0d
+              double e = -1.0d
+              long f = +1L
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/issues/2752")
+    @Test
+    void numericLiteralsWithUnderscores() {
+        rewriteRun(
+          groovy(
+            """
+              def l1 = 10_000L
+              def l2 = 10_000l
+              def i = 10_000
+              def d1 = 10_000d
+              def d2 = 10_000D
+              def f1 = 10_000f
+              def f2 = -10_000.0F
+              """
+          )
+        );
+    }
+
+    @Test
+    void numericLiteralWithSpacing() {
+        rewriteRun(
+          groovy(
+            """
+              def a = -           0.10
+              def b = +           0.10
               """
           )
         );
@@ -310,8 +346,8 @@ class LiteralTest implements RewriteTest {
                 // Groovy AST represents 1.8 as a BigDecimal
                 // Java AST would represent it as Double
                 // Our AST could reasonably make either choice
-                var initializer = requireNonNull((J.Literal) ((J.VariableDeclarations) cu.getStatements().get(0))
-                  .getVariables().get(0).getInitializer());
+                var initializer = requireNonNull((J.Literal) ((J.VariableDeclarations) cu.getStatements().getFirst())
+                  .getVariables().getFirst().getInitializer());
                 if (initializer.getType() == JavaType.Primitive.Double) {
                     assertThat(initializer.getValue()).isEqualTo(1.8);
                 } else if (TypeUtils.isOfClassType(initializer.getType(), "java.math.BigDecimal")) {
@@ -365,10 +401,10 @@ class LiteralTest implements RewriteTest {
         rewriteRun(
           groovy(
             """
-            "\\\\\\\\n\\\\t"
-            '\\\\n\\t'
-            ///\\\\n\\t///
-            """
+              "\\\\\\\\n\\\\t"
+              '\\\\n\\t'
+              ///\\\\n\\t///
+              """
           )
         );
     }
@@ -378,9 +414,9 @@ class LiteralTest implements RewriteTest {
         rewriteRun(
           groovy(
             """
-            '\t'
-            '	'
-            """
+              '\t'
+              '	'
+              """
           )
         );
     }
@@ -407,14 +443,81 @@ class LiteralTest implements RewriteTest {
     }
 
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/5232")
+    @Test
     void stringWithMultipleBackslashes() {
         rewriteRun(
           groovy(
             """
               "".replaceAll('\\\\', '/')
               "a\\b".replaceAll('\\\\', '/')
+              """
+          )
+        );
+    }
+
+    @Test
+    void slashyStrings() {
+        rewriteRun(
+          groovy(
+            """
+              def text = "irrelevant"
+              def glassfishVersion = "1"
+              println text =~ /^.*ClassPath Element.*glassfish-embedded-all-${glassfishVersion}.jar.*$/
+              """
+          ),
+          groovy(
+            """
+              def pattern = /Price: $$\\d+/
+              """
+          ),
+          groovy(
+            """
+              def pattern = /test$/
+              """
+          ),
+          groovy(
+            """
+              def pattern = /$$foo $${bar} $$$$/
+              """
+          )
+        );
+    }
+
+    @Test
+    void dollarSlashyStrings() {
+        rewriteRun(
+          groovy(
+            """
+              def version = "1.0"
+              def path = $/C:\\Program Files\\App-${version}\\bin/$
+              """
+          ),
+          groovy(
+            """
+              def text = $/Price: $$100/$
+              """
+          ),
+          groovy(
+            """
+              def path = $/C:/path/to/file/$
+              """
+          )
+        );
+    }
+
+    @Test
+    void patternSlashyStrings() {
+        rewriteRun(
+          groovy(
+            """
+              def version = "3.0"
+              def pattern = ~/version-${version}\\.jar/
+              """
+          ),
+          groovy(
+            """
+              def pattern = ~/$$\\d+\\.\\d+/
               """
           )
         );
