@@ -43,7 +43,7 @@ class JavaTemplateContextFreeTest implements RewriteTest {
               @Override
               public J visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext ctx) {
                   return method.getBody() != null && JavaTemplate.matches("System.out.println(1);",
-                    new Cursor(new Cursor(getCursor(), method.getBody()), method.getBody().getStatements().get(0))) ?
+                    new Cursor(new Cursor(getCursor(), method.getBody()), method.getBody().getStatements().getFirst())) ?
                     JavaTemplate.apply("System.out.println(2);", getCursor(), method.getCoordinates().replaceBody()) :
                     super.visitMethodDeclaration(method, ctx);
               }
@@ -72,7 +72,7 @@ class JavaTemplateContextFreeTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitVariableDeclarations(J.VariableDeclarations vd, ExecutionContext ctx) {
-                  if (vd.getVariables().size() == 1 && vd.getVariables().get(0).getSimpleName().equals("i")) {
+                  if (vd.getVariables().size() == 1 && "i".equals(vd.getVariables().getFirst().getSimpleName())) {
                       return JavaTemplate.apply("Integer i = 2;", getCursor(), vd.getCoordinates().replace());
                   }
                   return super.visitVariableDeclarations(vd, ctx);
@@ -112,7 +112,7 @@ class JavaTemplateContextFreeTest implements RewriteTest {
               @Override
               public J visitLiteral(J.Literal literal, ExecutionContext executionContext) {
                   if (literal.getMarkers().findFirst(SearchResult.class).isEmpty() &&
-                      (Objects.equals(literal.getValue(), 1) || Objects.requireNonNull(literal.getValue()).equals("s"))) {
+                      (Objects.equals(literal.getValue(), 1) || "s".equals(Objects.requireNonNull(literal.getValue())))) {
                       return JavaTemplate.apply("java.util.List.of(#{any()})", getCursor(), literal.getCoordinates().replace(), SearchResult.found(literal));
                   }
                   return super.visitLiteral(literal, executionContext);
@@ -142,8 +142,8 @@ class JavaTemplateContextFreeTest implements RewriteTest {
               }
               """,
             sourceSpecs -> sourceSpecs.afterRecipe(cu -> new JavaIsoVisitor<>() {
-                @SuppressWarnings("DataFlowIssue")
                 @Override
+                @SuppressWarnings("DataFlowIssue")
                 public <M extends Marker> M visitMarker(Marker marker, Object o) {
                     if (marker instanceof SearchResult) {
                         J.Literal literal = getCursor().getValue();
@@ -166,10 +166,8 @@ class JavaTemplateContextFreeTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.VariableDeclarations visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
-                  if (multiVariable.getVariables().get(0).getSimpleName().equals("o")) {
-                      return JavaTemplate.builder("var o = #{any()};")
-                        .build()
-                        .apply(getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().get(0).getInitializer());
+                  if ("o".equals(multiVariable.getVariables().getFirst().getSimpleName())) {
+                      return JavaTemplate.apply("var o = #{any()};", getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().getFirst().getInitializer());
                   }
                   return multiVariable;
               }
@@ -177,7 +175,7 @@ class JavaTemplateContextFreeTest implements RewriteTest {
           java(
             """
               import java.util.Optional;
-              
+
               class Test {
                   <T extends Number> void test(T element) {
                       Optional<T> o = Optional.of(element);
@@ -186,7 +184,7 @@ class JavaTemplateContextFreeTest implements RewriteTest {
               """,
             """
               import java.util.Optional;
-              
+
               class Test {
                   <T extends Number> void test(T element) {
                       var o = Optional.of(element);
@@ -233,17 +231,15 @@ class JavaTemplateContextFreeTest implements RewriteTest {
         );
     }
 
-    @Test
     @Disabled("Requires renaming generic variables in JavaTemplate")
+    @Test
     void contextFreeTypeParameterConflictNames_broken() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext executionContext) {
                   if ("printf".equals(method.getSimpleName()) && method.getArguments().size() == 2) {
-                      return JavaTemplate.builder("System.out.printf(#{any()}, #{any()}, 0);")
-                        .build()
-                        .apply(getCursor(), method.getCoordinates().replace(), method.getArguments().toArray());
+                      return JavaTemplate.apply("System.out.printf(#{any()}, #{any()}, 0);", getCursor(), method.getCoordinates().replace(), method.getArguments().toArray());
                   }
                   return super.visitMethodInvocation(method, executionContext);
               }
@@ -276,10 +272,8 @@ class JavaTemplateContextFreeTest implements RewriteTest {
             .recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.VariableDeclarations visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
-                  if (multiVariable.getVariables().get(0).getSimpleName().equals("o")) {
-                      return JavaTemplate.builder("var o = #{any()};")
-                        .build()
-                        .apply(getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().get(0).getInitializer());
+                  if ("o".equals(multiVariable.getVariables().getFirst().getSimpleName())) {
+                      return JavaTemplate.apply("var o = #{any()};", getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().getFirst().getInitializer());
                   }
                   return multiVariable;
               }
@@ -316,10 +310,8 @@ class JavaTemplateContextFreeTest implements RewriteTest {
             .recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.VariableDeclarations visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
-                  if (multiVariable.getVariables().get(0).getSimpleName().equals("o")) {
-                      return JavaTemplate.builder("var o = #{any()};")
-                        .build()
-                        .apply(getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().get(0).getInitializer());
+                  if ("o".equals(multiVariable.getVariables().getFirst().getSimpleName())) {
+                      return JavaTemplate.apply("var o = #{any()};", getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().getFirst().getInitializer());
                   }
                   return multiVariable;
               }
@@ -358,10 +350,8 @@ class JavaTemplateContextFreeTest implements RewriteTest {
             .recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.VariableDeclarations visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
-                  if (multiVariable.getVariables().get(0).getSimpleName().equals("o")) {
-                      return JavaTemplate.builder("var o = #{any()};")
-                        .build()
-                        .apply(getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().get(0).getInitializer());
+                  if ("o".equals(multiVariable.getVariables().getFirst().getSimpleName())) {
+                      return JavaTemplate.apply("var o = #{any()};", getCursor(), multiVariable.getCoordinates().replace(), multiVariable.getVariables().getFirst().getInitializer());
                   }
                   return multiVariable;
               }
