@@ -35,6 +35,46 @@ import static org.openrewrite.test.RewriteTest.toRecipe;
 @SuppressWarnings({"ConstantConditions", "PatternVariableCanBeUsed", "UnnecessaryBoxing", "StatementWithEmptyBody", "UnusedAssignment", "SizeReplaceableByIsEmpty", "ResultOfMethodCallIgnored", "RedundantOperationOnEmptyContainer"})
 class JavaTemplateTest implements RewriteTest {
 
+    @DocumentExample
+    @SuppressWarnings({"RedundantOperationOnEmptyContainer"})
+    @Test
+    void replaceForEachControlVariableType() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
+              @Override
+              public J.VariableDeclarations visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
+                  var mv = super.visitVariableDeclarations(multiVariable, ctx);
+                  if (mv.getVariables().getFirst().getInitializer() == null && TypeUtils.isOfType(mv.getTypeExpression()
+                    .getType(), JavaType.Primitive.String)) {
+                      mv = JavaTemplate.apply("Object #{}", getCursor(),
+                        multiVariable.getCoordinates().replace(),
+                        multiVariable.getVariables().getFirst().getSimpleName()
+                      );
+                  }
+                  return mv;
+              }
+          })),
+          java(
+            """
+              import java.util.ArrayList;
+              class T {
+                  void m() {
+                      for (String s : new ArrayList<String>()) {}
+                  }
+              }
+              """,
+            """
+              import java.util.ArrayList;
+              class T {
+                  void m() {
+                      for (Object s : new ArrayList<String>()) {}
+                  }
+              }
+              """
+          )
+        );
+    }
+
     @Test
     void addAnnotation() {
         rewriteRun(
@@ -47,8 +87,7 @@ class JavaTemplateTest implements RewriteTest {
                   if (!cd.getLeadingAnnotations().isEmpty()) {
                       return cd;
                   }
-                  cd = template.apply(updateCursor(cd), cd.getCoordinates().addAnnotation(comparing(J.Annotation::getSimpleName)));
-                  return cd;
+                  return template.apply(updateCursor(cd), cd.getCoordinates().addAnnotation(comparing(J.Annotation::getSimpleName)));
               }
           })),
           java(
@@ -71,9 +110,7 @@ class JavaTemplateTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
                 @Override
                 public <T extends J> J visitParentheses(J.Parentheses<T> parens, ExecutionContext ctx) {
-                    return JavaTemplate.builder("#{any()}")
-                      .build()
-                      .apply(getCursor(), parens.getCoordinates().replace(), parens.getTree());
+                    return JavaTemplate.apply("#{any()}", getCursor(), parens.getCoordinates().replace(), parens.getTree());
                 }
             }))
             .cycles(1)
@@ -93,6 +130,32 @@ class JavaTemplateTest implements RewriteTest {
         );
     }
 
+    @Test
+    void addParenthesesToParameter() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
+                @Override
+                public J visitBinary(J.Binary binary, ExecutionContext ctx) {
+                    return JavaTemplate.apply("#{any(int)} * 3", getCursor(), binary.getCoordinates().replace(), binary);
+                }
+            }))
+            .cycles(1)
+            .expectedCyclesThatMakeChanges(1),
+          java(
+            """
+              public class A {
+                  int a = 1 + 2;
+              }
+              """,
+            """
+              public class A {
+                  int a = (1 + 2) * 3;
+              }
+              """
+          )
+        );
+    }
+
     @Issue("https://github.com/openrewrite/rewrite/issues/2090")
     @Test
     void assignmentWithinIfPredicate() {
@@ -101,7 +164,7 @@ class JavaTemplateTest implements RewriteTest {
               @Override
               public J.Assignment visitAssignment(J.Assignment assignment, ExecutionContext ctx) {
                   if ((assignment.getAssignment() instanceof J.Literal) &&
-                      ((J.Literal) assignment.getAssignment()).getValue().equals(1)) {
+                    ((J.Literal) assignment.getAssignment()).getValue().equals(1)) {
                       return JavaTemplate.builder("value = 0")
                         .contextSensitive()
                         .build()
@@ -141,25 +204,24 @@ class JavaTemplateTest implements RewriteTest {
                   if (multiVariable.getTypeExpression() instanceof J.Identifier && "var".equals(((J.Identifier) multiVariable.getTypeExpression()).getSimpleName())) {
                       return multiVariable;
                   }
-                  J.VariableDeclarations.NamedVariable var0 = multiVariable.getVariables().get(0);
-                  return JavaTemplate.builder("var #{} = #{any()};")
-                    .build()
-                    .apply(getCursor(), multiVariable.getCoordinates().replace(), var0.getSimpleName(), var0.getInitializer());
+                  J.VariableDeclarations.NamedVariable var0 = multiVariable.getVariables().getFirst();
+                  return JavaTemplate.apply("var #{} = #{any()};", getCursor(), multiVariable.getCoordinates().replace(), var0.getSimpleName(), var0.getInitializer());
               }
           })),
           java(
             """
               import java.io.Serializable;
-              
+
               abstract class Outer<T extends Serializable> {
                   abstract T doIt();
                   void trigger() {
                       T x = doIt();
                   }
               }
-              """, """
+              """,
+            """
               import java.io.Serializable;
-              
+
               abstract class Outer<T extends Serializable> {
                   abstract T doIt();
                   void trigger() {
@@ -171,8 +233,8 @@ class JavaTemplateTest implements RewriteTest {
         );
     }
 
-    @SuppressWarnings("InstantiationOfUtilityClass")
     @Issue("https://github.com/openrewrite/rewrite-logging-frameworks/issues/66")
+    @SuppressWarnings("InstantiationOfUtilityClass")
     @Test
     void lambdaIsNewClass() {
         rewriteRun(
@@ -181,7 +243,7 @@ class JavaTemplateTest implements RewriteTest {
               public J.Assignment visitAssignment(J.Assignment assignment, ExecutionContext ctx) {
                   var a = assignment;
                   if (a.getAssignment() instanceof J.MethodInvocation) {
-                      J.MethodInvocation mi = (J.MethodInvocation) a.getAssignment();
+                      var mi = (J.MethodInvocation) a.getAssignment();
                       a = JavaTemplate.apply("1", getCursor(), mi.getCoordinates().replace());
                   }
                   return a;
@@ -207,46 +269,6 @@ class JavaTemplateTest implements RewriteTest {
                           int i;
                           i = 1;
                       }, "hello" );
-                  }
-              }
-              """
-          )
-        );
-    }
-
-    @DocumentExample
-    @SuppressWarnings({"RedundantOperationOnEmptyContainer"})
-    @Test
-    void replaceForEachControlVariableType() {
-        rewriteRun(
-          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
-              @Override
-              public J.VariableDeclarations visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
-                  var mv = super.visitVariableDeclarations(multiVariable, ctx);
-                  if (mv.getVariables().get(0).getInitializer() == null && TypeUtils.isOfType(mv.getTypeExpression()
-                    .getType(), JavaType.Primitive.String)) {
-                      mv = JavaTemplate.apply("Object #{}", getCursor(),
-                        multiVariable.getCoordinates().replace(),
-                        multiVariable.getVariables().get(0).getSimpleName()
-                      );
-                  }
-                  return mv;
-              }
-          })),
-          java(
-            """
-              import java.util.ArrayList;
-              class T {
-                  void m() {
-                      for (String s : new ArrayList<String>()) {}
-                  }
-              }
-              """,
-            """
-              import java.util.ArrayList;
-              class T {
-                  void m() {
-                      for (Object s : new ArrayList<String>()) {}
                   }
               }
               """
@@ -358,9 +380,9 @@ class JavaTemplateTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/3102")
     @SuppressWarnings({"ResultOfMethodCallIgnored"})
+    @Test
     void expressionAsStatementWithoutTerminatingSemicolon() {
         // NOTE: I am not convinced that we really need to support this case. It is not valid Java.
         // But since this has been working up until now, I am leaving it in.
@@ -371,18 +393,11 @@ class JavaTemplateTest implements RewriteTest {
                   if (classDecl.getBody().getStatements().size() > 1) {
                       return classDecl;
                   }
-                  return JavaTemplate.builder("""
+                  return JavaTemplate.apply("""
                       void m2() {
                       	  #{any()}
                       }
-                      """
-                    )
-                    .build()
-                    .apply(
-                      getCursor(),
-                      classDecl.getBody().getStatements().get(0).getCoordinates().after(),
-                      ((J.MethodDeclaration) classDecl.getBody().getStatements().get(0)).getBody().getStatements().get(0)
-                    );
+                      """, getCursor(), classDecl.getBody().getStatements().getFirst().getCoordinates().after(), ((J.MethodDeclaration) classDecl.getBody().getStatements().getFirst()).getBody().getStatements().getFirst());
               }
           })),
           java(
@@ -398,7 +413,7 @@ class JavaTemplateTest implements RewriteTest {
                   void m() {
                       hashCode();
                   }
-              
+
                   void m2() {
                       hashCode();
                   }
@@ -408,21 +423,21 @@ class JavaTemplateTest implements RewriteTest {
         );
     }
 
-    @Test
     @SuppressWarnings("ArraysAsListWithZeroOrOneArgument")
+    @Test
     void replaceAnonymousClassObject() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
-                  if (method.getSimpleName().equals("asList")) {
-                      maybeAddImport("java.util.Collections");
+                  if ("asList".equals(method.getSimpleName())) {
                       maybeRemoveImport("java.util.Arrays");
+                      maybeAddImport("java.util.Collections");
 
                       return JavaTemplate.builder("Collections.singletonList(#{any()})")
                         .imports("java.util.Collections")
                         .build()
-                        .apply(getCursor(), method.getCoordinates().replace(), method.getArguments().get(0));
+                        .apply(getCursor(), method.getCoordinates().replace(), method.getArguments().getFirst());
                   }
                   return method;
               }
@@ -430,7 +445,7 @@ class JavaTemplateTest implements RewriteTest {
           java(
             """
               import java.util.Arrays;
-              
+
               class T {
                   void m() {
                       Object l = Arrays.asList(new java.util.HashMap<String, String>() {
@@ -442,7 +457,7 @@ class JavaTemplateTest implements RewriteTest {
               """,
             """
               import java.util.Collections;
-              
+
               class T {
                   void m() {
                       Object l = Collections.singletonList(new java.util.HashMap<String, String>() {
@@ -456,36 +471,36 @@ class JavaTemplateTest implements RewriteTest {
         );
     }
 
-    @Test
     @SuppressWarnings("ArraysAsListWithZeroOrOneArgument")
+    @Test
     void replaceGenericTypedObject() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
-                  if (method.getSimpleName().equals("asList")) {
-                      maybeAddImport("java.util.Collections");
+                  if ("asList".equals(method.getSimpleName())) {
                       maybeRemoveImport("java.util.Arrays");
+                      maybeAddImport("java.util.Collections");
                       return JavaTemplate.builder("Collections.singletonList(#{any()})")
                         .imports("java.util.Collections")
                         .build()
-                        .apply(getCursor(), method.getCoordinates().replace(), method.getArguments().get(0));
+                        .apply(getCursor(), method.getCoordinates().replace(), method.getArguments().getFirst());
                   }
                   return method;
               }
           })).afterRecipe(run -> new JavaIsoVisitor<Integer>() {
               @Override
               public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, Integer integer) {
-                  JavaType.Parameterized type = (JavaType.Parameterized) method.getType();
+                  var type = (JavaType.Parameterized) method.getType();
                   assertThat(type.getTypeParameters()).hasSize(1);
-                  assertThat(type.getTypeParameters().get(0)).isInstanceOf(JavaType.GenericTypeVariable.class);
+                  assertThat(type.getTypeParameters().getFirst()).isInstanceOf(JavaType.GenericTypeVariable.class);
                   return method;
               }
-          }.visit(run.getChangeset().getAllResults().get(0).getAfter(), 0)),
+          }.visit(run.getChangeset().getAllResults().getFirst().getAfter(), 0)),
           java(
             """
               import java.util.Arrays;
-              
+
               class T<T> {
                   void m(T o) {
                       Object l = Arrays.asList(o);
@@ -494,7 +509,7 @@ class JavaTemplateTest implements RewriteTest {
               """,
             """
               import java.util.Collections;
-              
+
               class T<T> {
                   void m(T o) {
                       Object l = Collections.singletonList(o);
@@ -505,39 +520,39 @@ class JavaTemplateTest implements RewriteTest {
         );
     }
 
-    @Test
     @SuppressWarnings("ArraysAsListWithZeroOrOneArgument")
+    @Test
     void replaceParameterizedTypeObject() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
-                  if (method.getSimpleName().equals("asList")) {
-                      maybeAddImport("java.util.Collections");
+                  if ("asList".equals(method.getSimpleName())) {
                       maybeRemoveImport("java.util.Arrays");
+                      maybeAddImport("java.util.Collections");
                       return JavaTemplate.builder("Collections.singletonList(#{any()})")
                         .imports("java.util.Collections")
                         .build()
-                        .apply(getCursor(), method.getCoordinates().replace(), method.getArguments().get(0));
+                        .apply(getCursor(), method.getCoordinates().replace(), method.getArguments().getFirst());
                   }
                   return method;
               }
           })).afterRecipe(run -> new JavaIsoVisitor<Integer>() {
               @Override
               public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, Integer integer) {
-                  JavaType.Parameterized type = (JavaType.Parameterized) method.getType();
+                  var type = (JavaType.Parameterized) method.getType();
                   assertThat(type.getTypeParameters()).hasSize(1);
-                  assertThat(type.getTypeParameters().get(0)).isInstanceOf(JavaType.Parameterized.class);
-                  assertThat(((JavaType.Parameterized) type.getTypeParameters().get(0)).getTypeParameters()
-                    .get(0)).isInstanceOf(JavaType.GenericTypeVariable.class);
+                  assertThat(type.getTypeParameters().getFirst()).isInstanceOf(JavaType.Parameterized.class);
+                  assertThat(((JavaType.Parameterized) type.getTypeParameters().getFirst()).getTypeParameters()
+                    .getFirst()).isInstanceOf(JavaType.GenericTypeVariable.class);
                   return method;
               }
-          }.visit(run.getChangeset().getAllResults().get(0).getAfter(), 0)),
+          }.visit(run.getChangeset().getAllResults().getFirst().getAfter(), 0)),
           java(
             """
               import java.util.Arrays;
               import java.util.Collection;
-              
+
               class T<T> {
                   void m(Collection<T> o) {
                       Object l = Arrays.asList(o);
@@ -547,7 +562,7 @@ class JavaTemplateTest implements RewriteTest {
             """
               import java.util.Collection;
               import java.util.Collections;
-              
+
               class T<T> {
                   void m(Collection<T> o) {
                       Object l = Collections.singletonList(o);
@@ -566,10 +581,8 @@ class JavaTemplateTest implements RewriteTest {
               @Override
               public J visitBinary(J.Binary binary, ExecutionContext ctx) {
                   if (binary.getLeft() instanceof J.MethodInvocation) {
-                      J.MethodInvocation mi = (J.MethodInvocation) binary.getLeft();
-                      return JavaTemplate.builder("!#{any(java.util.List)}.isEmpty()")
-                        .build()
-                        .apply(getCursor(), mi.getCoordinates().replace(), mi.getSelect());
+                      var mi = (J.MethodInvocation) binary.getLeft();
+                      return JavaTemplate.apply("!#{any(java.util.List)}.isEmpty()", getCursor(), mi.getCoordinates().replace(), mi.getSelect());
                   } else if (binary.getLeft() instanceof J.Unary) {
                       return binary.getLeft();
                   }
@@ -608,10 +621,10 @@ class JavaTemplateTest implements RewriteTest {
 
               @Override
               public J visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
-                  J.MethodInvocation mi = (J.MethodInvocation) super.visitMethodInvocation(method, ctx);
+                  var mi = (J.MethodInvocation) super.visitMethodInvocation(method, ctx);
                   if (bigDecimalSetScale.matches(mi)) {
                       mi = twoArgScale.apply(updateCursor(mi), mi.getCoordinates().replaceArguments(),
-                        mi.getArguments().get(0), "RoundingMode.HALF_UP");
+                        mi.getArguments().getFirst(), "RoundingMode.HALF_UP");
                   }
                   return mi;
               }
@@ -620,7 +633,7 @@ class JavaTemplateTest implements RewriteTest {
             """
               import java.math.BigDecimal;
               import java.math.RoundingMode;
-              
+
               class A {
                   void m() {
                       StringBuilder sb = new StringBuilder();
@@ -631,7 +644,7 @@ class JavaTemplateTest implements RewriteTest {
             """
               import java.math.BigDecimal;
               import java.math.RoundingMode;
-              
+
               class A {
                   void m() {
                       StringBuilder sb = new StringBuilder();
@@ -650,12 +663,7 @@ class JavaTemplateTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitUnary(J.Unary unary, ExecutionContext ctx) {
-                  return JavaTemplate.builder("#{any()}++")
-                    .build().apply(
-                      getCursor(),
-                      unary.getCoordinates().replace(),
-                      unary.getExpression()
-                    );
+                  return JavaTemplate.apply("#{any()}++", getCursor(), unary.getCoordinates().replace(), unary.getExpression());
               }
           }).withMaxCycles(1)),
           java(
@@ -677,8 +685,8 @@ class JavaTemplateTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/2540")
+    @Test
     void replaceMemberReference() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
@@ -728,7 +736,7 @@ class JavaTemplateTest implements RewriteTest {
 
               @Override
               public J visitFieldAccess(J.FieldAccess fa, ExecutionContext ctx) {
-                  if (fa.getSimpleName().equals("f")) {
+                  if ("f".equals(fa.getSimpleName())) {
                       return JavaTemplate.apply("#{any(java.io.File)}.getCanonicalFile().toPath()",
                         getCursor(), fa.getCoordinates().replace(), fa);
                   } else {
@@ -766,7 +774,7 @@ class JavaTemplateTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
-                  if (method.getSimpleName().equals("clear")) {
+                  if ("clear".equals(method.getSimpleName())) {
                       return JavaTemplate.builder("words.add(\"jon\");")
                         .contextSensitive()
                         .build()
@@ -804,7 +812,7 @@ class JavaTemplateTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitNewClass(J.NewClass newClass, ExecutionContext ctx) {
-                  if (newClass.getArguments().get(0) instanceof J.Empty) {
+                  if (newClass.getArguments().getFirst() instanceof J.Empty) {
                       return newClass;
                   }
                   return JavaTemplate.builder("new A()")
@@ -818,20 +826,20 @@ class JavaTemplateTest implements RewriteTest {
               class A {
                   public enum Type {
                       One;
-              
+
                       public Type(String t) {
                       }
-              
+
                       String t;
-              
+
                       public static Type fromType(String type) {
                           return null;
                       }
                   }
-              
+
                   public A(Type type) {}
                   public A() {}
-              
+
                   public void method(Type type) {
                       new A(type);
                   }
@@ -841,20 +849,20 @@ class JavaTemplateTest implements RewriteTest {
               class A {
                   public enum Type {
                       One;
-              
+
                       public Type(String t) {
                       }
-              
+
                       String t;
-              
+
                       public static Type fromType(String type) {
                           return null;
                       }
                   }
-              
+
                   public A(Type type) {}
                   public A() {}
-              
+
                   public void method(Type type) {
                       new A();
                   }
@@ -864,8 +872,8 @@ class JavaTemplateTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/2375")
+    @Test
     void arrayInitializer() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
@@ -877,7 +885,7 @@ class JavaTemplateTest implements RewriteTest {
                       return JavaTemplate.builder("Arrays.asList(#{any(java.lang.Integer)}, #{any(java.lang.Integer)}, #{any(java.lang.Integer)})")
                         .imports("java.util.Arrays")
                         .build()
-                        .apply(getCursor(), method.getCoordinates().replace(), method.getArguments().get(0),
+                        .apply(getCursor(), method.getCoordinates().replace(), method.getArguments().getFirst(),
                           method.getArguments().get(1), method.getArguments().get(2));
                   }
                   return method;
@@ -886,17 +894,18 @@ class JavaTemplateTest implements RewriteTest {
           java(
             """
               package abc;
-              
+
               public class ArrayHelper {
                   public static Object[] of(Object... objects){ return null;}
               }
-              """, SourceSpec::skip
+              """,
+            SourceSpec::skip
           ),
           java(
             """
               import abc.ArrayHelper;
               import java.util.Arrays;
-              
+
               class A {
                   Object[] o = new Object[] {
                       ArrayHelper.of(1, 2, 3)
@@ -906,7 +915,7 @@ class JavaTemplateTest implements RewriteTest {
             """
               import abc.ArrayHelper;
               import java.util.Arrays;
-              
+
               class A {
                   Object[] o = new Object[] {
                           Arrays.asList(1, 2, 3)
@@ -917,9 +926,9 @@ class JavaTemplateTest implements RewriteTest {
         );
     }
 
+    @Issue("https://github.com/openrewrite/rewrite/issues/2375")
     @SuppressWarnings("ALL")
     @Test
-    @Issue("https://github.com/openrewrite/rewrite/issues/2375")
     void multiDimensionalArrayInitializer() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
@@ -927,9 +936,9 @@ class JavaTemplateTest implements RewriteTest {
 
               @Override
               public J visitNewClass(J.NewClass newClass, ExecutionContext ctx) {
-                  J.NewClass nc = (J.NewClass) super.visitNewClass(newClass, ctx);
+                  var nc = (J.NewClass) super.visitNewClass(newClass, ctx);
                   return JavaTemplate.apply("Integer.valueOf(#{any(java.lang.Integer)}",
-                    getCursor(), nc.getCoordinates().replace(), nc.getArguments().get(0));
+                    getCursor(), nc.getCoordinates().replace(), nc.getArguments().getFirst());
               }
           })),
           java(
@@ -962,7 +971,7 @@ class JavaTemplateTest implements RewriteTest {
           java(
             """
               import java.util.Collection;
-              
+
               class Test {
                   void doSomething(Collection<Object> c) {
                       assert c.size() > 0;
@@ -971,7 +980,7 @@ class JavaTemplateTest implements RewriteTest {
               """,
             """
               import java.util.Collection;
-              
+
               class Test {
                   void doSomething(Collection<Object> c) {
                       assert !c.isEmpty();
@@ -988,22 +997,20 @@ class JavaTemplateTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitBinary(J.Binary binary, ExecutionContext ctx) {
-                  return JavaTemplate.builder("\"ab\"")
-                    .build()
-                    .apply(getCursor(), binary.getCoordinates().replace());
+                  return JavaTemplate.apply("\"ab\"", getCursor(), binary.getCoordinates().replace());
               }
           })),
           java(
             """
               enum Outer {
                   A, B;
-              
+
                   enum Inner {
                       C, D
                   }
-              
+
                   private final String s;
-              
+
                   Outer() {
                       s = "a" + "b";
                   }
@@ -1012,13 +1019,13 @@ class JavaTemplateTest implements RewriteTest {
             """
               enum Outer {
                   A, B;
-              
+
                   enum Inner {
                       C, D
                   }
-              
+
                   private final String s;
-              
+
                   Outer() {
                       s = "ab";
                   }
@@ -1069,7 +1076,7 @@ class JavaTemplateTest implements RewriteTest {
                       return JavaTemplate.builder("String x = s;")
                         .contextSensitive()
                         .build()
-                        .apply(getCursor(), block.getStatements().get(0).getCoordinates().after());
+                        .apply(getCursor(), block.getStatements().getFirst().getCoordinates().after());
                   }
                   return super.visitBlock(block, ctx);
               }
@@ -1160,11 +1167,11 @@ class JavaTemplateTest implements RewriteTest {
                     }
 
                     List<Expression> args = method.getArguments();
-                    Expression expected = args.get(0);
+                    Expression expected = args.getFirst();
                     Expression actual = args.get(1);
 
-                    maybeAddImport("org.assertj.core.api.Assertions", "assertThat");
                     maybeRemoveImport("org.junit.jupiter.api.Assertions");
+                    maybeAddImport("org.assertj.core.api.Assertions", "assertThat");
 
                     if (args.size() == 2) {
                         return JavaTemplate.builder("assertThat(#{any()}).isEqualTo(#{any()});")
@@ -1181,7 +1188,7 @@ class JavaTemplateTest implements RewriteTest {
             """
               import java.util.Map;
               import org.junit.jupiter.api.Assertions;
-              
+
               class T {
                   void m(String one, Map<String, ?> map) {
                       Assertions.assertEquals(one, map.get("one"));
@@ -1190,9 +1197,9 @@ class JavaTemplateTest implements RewriteTest {
               """,
             """
               import java.util.Map;
-              
+
               import static org.assertj.core.api.Assertions.assertThat;
-              
+
               class T {
                   void m(String one, Map<String, ?> map) {
                       assertThat(map.get("one")).isEqualTo(one);
@@ -1216,7 +1223,7 @@ class JavaTemplateTest implements RewriteTest {
                   }
 
                   List<Expression> args = method.getArguments();
-                  Expression expected = args.get(0);
+                  Expression expected = args.getFirst();
                   Expression actual = args.get(1);
 
                   maybeAddImport("java.util.Objects", "requireNonNull");
@@ -1237,7 +1244,7 @@ class JavaTemplateTest implements RewriteTest {
               import java.util.Objects;
               import java.util.Map;
               import java.util.HashMap;
-              
+
               class T {
               	void m() {
               		Map<String, ?> map = new HashMap<>();
@@ -1248,10 +1255,10 @@ class JavaTemplateTest implements RewriteTest {
             """
               import java.util.Objects;
               import java.util.Map;
-              
+
               import static java.util.Objects.requireNonNull;
               import java.util.HashMap;
-              
+
               class T {
               	void m() {
               		Map<String, ?> map = new HashMap<>();
@@ -1269,8 +1276,8 @@ class JavaTemplateTest implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
-                  J.VariableDeclarations vd = (J.VariableDeclarations) super.visitVariableDeclarations(multiVariable, ctx);
-                  if (vd.getVariables().size() == 1 || vd.getVariables().get(0).getSimpleName().equals("a")) {
+                  var vd = (J.VariableDeclarations) super.visitVariableDeclarations(multiVariable, ctx);
+                  if (vd.getVariables().size() == 1 || "a".equals(vd.getVariables().getFirst().getSimpleName())) {
                       return JavaTemplate.apply("String a();", getCursor(), vd.getCoordinates().replace());
                   }
                   return vd;
@@ -1279,13 +1286,13 @@ class JavaTemplateTest implements RewriteTest {
           java(
             """
               interface Test {
-              
+
                   String a;
               }
               """,
             """
               interface Test {
-              
+
                   String a();
               }
               """
@@ -1300,22 +1307,24 @@ class JavaTemplateTest implements RewriteTest {
           java(
             """
               import org.jetbrains.annotations.NotNull;
-              
+
               class A {
                   String testMethod(@NotNull final String test) {}
               }
-              """, """
+              """,
+            """
               import lombok.NonNull;
-              
+
               class A {
                   String testMethod(@NonNull final String test) {}
               }
-              """)
+              """
+          )
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite-spring/pull/284")
+    @Test
     void replaceMethodInChainFollowedByGenericTypeParameters() {
         rewriteRun(
           spec -> spec
@@ -1323,9 +1332,7 @@ class JavaTemplateTest implements RewriteTest {
                 @Override
                 public J visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
                     if (new MethodMatcher("batch.StepBuilder create()").matches(method)) {
-                        return JavaTemplate.builder("new StepBuilder()")
-                          .build()
-                          .apply(getCursor(), method.getCoordinates().replace());
+                        return JavaTemplate.apply("new StepBuilder()", getCursor(), method.getCoordinates().replace());
                     }
                     return super.visitMethodInvocation(method, ctx);
                 }
@@ -1374,10 +1381,8 @@ class JavaTemplateTest implements RewriteTest {
               public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
                   J.MethodInvocation mi = super.visitMethodInvocation(method, ctx);
                   if (new MethodMatcher("Foo bar(..)").matches(mi) &&
-                      mi.getArguments().get(0) instanceof J.Binary) {
-                      return JavaTemplate.builder("\"Hello, {}\", \"World!\"")
-                        .build()
-                        .apply(new Cursor(getCursor().getParent(), mi), mi.getCoordinates().replaceArguments());
+                    mi.getArguments().getFirst() instanceof J.Binary) {
+                      return JavaTemplate.apply("\"Hello, {}\", \"World!\"", new Cursor(getCursor().getParent(), mi), mi.getCoordinates().replaceArguments());
                   }
                   return mi;
               }
@@ -1417,7 +1422,7 @@ class JavaTemplateTest implements RewriteTest {
                       return JavaTemplate.builder("final var #{}")
                         .contextSensitive()
                         .build()
-                        .apply(getCursor(), coordinates, new Object[]{vd.getVariables().get(0).getSimpleName()});
+                        .apply(getCursor(), coordinates, new Object[]{vd.getVariables().getFirst().getSimpleName()});
                   }
                   return vd;
               }
@@ -1426,7 +1431,7 @@ class JavaTemplateTest implements RewriteTest {
             """
               import java.util.List;
               import java.util.ArrayList;
-              
+
               class A {
                   void bar(List<String> lst) {
                       for (String s : lst) {}
@@ -1436,11 +1441,57 @@ class JavaTemplateTest implements RewriteTest {
             """
               import java.util.List;
               import java.util.ArrayList;
-              
+
               class A {
                   void bar(List<String> lst) {
                       for (final var s : lst) {}
                   }
+              }
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/issues/5289")
+    @Test
+    void recursiveType() {
+        rewriteRun(
+          spec -> spec.expectedCyclesThatMakeChanges(1).cycles(1)
+            .recipe(toRecipe(() -> new JavaVisitor<>() {
+                @Override
+                public J.Lambda visitLambda(J.Lambda lambda, ExecutionContext ctx) {
+                    var param = (J.VariableDeclarations) lambda.getParameters().getParameters().getFirst();
+                    J.VariableDeclarations.NamedVariable variable = param.getVariables().getFirst();
+
+                    return JavaTemplate.builder("reference -> System.out.println(#{any()})")
+                      .contextSensitive()
+                      .build()
+                      .apply(getCursor(), lambda.getCoordinates().replace(), variable.getName());
+                }
+            })),
+          java(
+            """
+              import java.util.Optional;
+
+              class BugTest {
+                  void run(One<?, ?> firstBuild) {
+                      Optional.of(firstBuild).ifPresent(reference -> {});
+                  }
+
+                  abstract static class One<TwoT extends Two<TwoT, OneT>, OneT extends One<TwoT, OneT>> {}
+                  abstract static class Two<TwoT extends Two<TwoT, OneT>, OneT extends One<TwoT, OneT>> {}
+              }
+              """,
+            """
+              import java.util.Optional;
+
+              class BugTest {
+                  void run(One<?, ?> firstBuild) {
+                      Optional.of(firstBuild).ifPresent(reference -> System.out.println(reference));
+                  }
+
+                  abstract static class One<TwoT extends Two<TwoT, OneT>, OneT extends One<TwoT, OneT>> {}
+                  abstract static class Two<TwoT extends Two<TwoT, OneT>, OneT extends One<TwoT, OneT>> {}
               }
               """
           )
