@@ -39,10 +39,8 @@ class JavaTemplateTest3Test implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.Package visitPackage(J.Package pkg, ExecutionContext p) {
-                  if (pkg.getExpression().printTrimmed(getCursor()).equals("a")) {
-                      return JavaTemplate.builder("b")
-                        .build()
-                        .apply(getCursor(), pkg.getCoordinates().replace());
+                  if ("a".equals(pkg.getExpression().printTrimmed(getCursor()))) {
+                      return JavaTemplate.apply("b", getCursor(), pkg.getCoordinates().replace());
                   }
                   return super.visitPackage(pkg, p);
               }
@@ -50,7 +48,7 @@ class JavaTemplateTest3Test implements RewriteTest {
               @Override
               public J.ClassDeclaration visitClassDeclaration(J.ClassDeclaration classDecl, ExecutionContext p) {
                   var cd = super.visitClassDeclaration(classDecl, p);
-                  if (classDecl.getType().getPackageName().equals("a")) {
+                  if ("a".equals(classDecl.getType().getPackageName())) {
                       cd = cd.withType(cd.getType().withFullyQualifiedName("b.${cd.getSimpleName()}"));
                   }
                   return cd;
@@ -77,14 +75,14 @@ class JavaTemplateTest3Test implements RewriteTest {
           spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
               @Override
               public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, ExecutionContext p) {
-                  if (method.getSimpleName().equals("test")) {
+                  if ("test".equals(method.getSimpleName())) {
                       return JavaTemplate.apply("int test2(int n) { return n; }", getCursor(), method.getCoordinates().replace());
                   }
                   return super.visitMethodDeclaration(method, p);
               }
           })).afterRecipe(run -> {
-              J.CompilationUnit cu = (J.CompilationUnit) run.getChangeset().getAllResults().get(0).getAfter();
-              var methodType = ((J.MethodDeclaration) cu.getClasses().get(0).getBody().getStatements().get(0)).getMethodType();
+              var cu = (J.CompilationUnit) run.getChangeset().getAllResults().getFirst().getAfter();
+              var methodType = ((J.MethodDeclaration) cu.getClasses().getFirst().getBody().getStatements().getFirst()).getMethodType();
               assertThat(methodType.getReturnType()).isEqualTo(JavaType.Primitive.Int);
               assertThat(methodType.getParameterTypes()).containsExactly(JavaType.Primitive.Int);
           }),
@@ -97,7 +95,7 @@ class JavaTemplateTest3Test implements RewriteTest {
               """,
             """
               class Test {
-              
+
                   int test2(int n) {
                       return n;
                   }
@@ -123,14 +121,14 @@ class JavaTemplateTest3Test implements RewriteTest {
           java(
             """
               import java.util.function.Function;
-              
+
               class Test {
                   Function<Object, String> toString = it -> it.toString();
               }
               """,
             """
               import java.util.function.Function;
-              
+
               class Test {
                   Function<Object, String> toString = Object::toString;
               }
@@ -139,9 +137,9 @@ class JavaTemplateTest3Test implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/1120")
     @SuppressWarnings({"ResultOfMethodCallIgnored", "CodeBlock2Expr"})
+    @Test
     void replaceStatementInLambdaBodySingleStatementBlock() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
@@ -152,7 +150,7 @@ class JavaTemplateTest3Test implements RewriteTest {
               @Override
               public J visitReturn(J.Return return_, ExecutionContext p) {
                   if (return_.getExpression() instanceof J.Binary) {
-                      J.Binary binary = (J.Binary) return_.getExpression();
+                      var binary = (J.Binary) return_.getExpression();
                       if (binary.getRight() instanceof J.Literal &&
                           ((J.Literal) binary.getRight()).getValue().equals(0)) {
                           return t.apply(getCursor(), return_.getCoordinates().replace());
@@ -164,10 +162,10 @@ class JavaTemplateTest3Test implements RewriteTest {
           java(
             """
               import java.util.stream.Stream;
-              
+
               class Test {
                   int n;
-              
+
                   void method(Stream<Object> obj) {
                       obj.filter(o -> {
                           return n == 0;
@@ -177,10 +175,10 @@ class JavaTemplateTest3Test implements RewriteTest {
               """,
             """
               import java.util.stream.Stream;
-              
+
               class Test {
                   int n;
-              
+
                   void method(Stream<Object> obj) {
                       obj.filter(o -> {
                           return n == 1;
@@ -192,9 +190,9 @@ class JavaTemplateTest3Test implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/1120")
     @SuppressWarnings({"ResultOfMethodCallIgnored", "ConstantConditions"})
+    @Test
     void replaceStatementInLambdaBodyWithVariableDeclaredInBlock() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
@@ -205,7 +203,7 @@ class JavaTemplateTest3Test implements RewriteTest {
               @Override
               public J visitReturn(J.Return return_, ExecutionContext p) {
                   if (return_.getExpression() instanceof J.Binary) {
-                      J.Binary binary = (J.Binary) return_.getExpression();
+                      var binary = (J.Binary) return_.getExpression();
                       if (binary.getRight() instanceof J.Literal && ((J.Literal) binary.getRight()).getValue().equals(0)) {
                           return t.apply(getCursor(), return_.getCoordinates().replace());
                       }
@@ -216,7 +214,7 @@ class JavaTemplateTest3Test implements RewriteTest {
           java(
             """
               import java.util.stream.Stream;
-              
+
               class Test {
                   static void method(Stream<Object> obj) {
                       obj.filter(o -> {
@@ -228,7 +226,7 @@ class JavaTemplateTest3Test implements RewriteTest {
               """,
             """
               import java.util.stream.Stream;
-              
+
               class Test {
                   static void method(Stream<Object> obj) {
                       obj.filter(o -> {
@@ -242,8 +240,8 @@ class JavaTemplateTest3Test implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/1120")
+    @Test
     void replaceStatementInLambdaBodyMultiStatementBlock() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
@@ -251,7 +249,7 @@ class JavaTemplateTest3Test implements RewriteTest {
 
               @Override
               public J visitMethodInvocation(J.MethodInvocation method, ExecutionContext p) {
-                  if (method.getSimpleName().equals("toLowerCase")) {
+                  if ("toLowerCase".equals(method.getSimpleName())) {
                       return t.apply(getCursor(), method.getCoordinates().replace(), method.getSelect());
                   }
                   return super.visitMethodInvocation(method, p);
@@ -260,7 +258,7 @@ class JavaTemplateTest3Test implements RewriteTest {
           java(
             """
               import java.util.stream.Stream;
-              
+
               class Test {
                   static void method(Stream<String> obj) {
                       obj.map(o -> {
@@ -273,7 +271,7 @@ class JavaTemplateTest3Test implements RewriteTest {
               """,
             """
               import java.util.stream.Stream;
-              
+
               class Test {
                   static void method(Stream<String> obj) {
                       obj.map(o -> {
@@ -288,15 +286,15 @@ class JavaTemplateTest3Test implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/1120")
     @SuppressWarnings({"ResultOfMethodCallIgnored", "SizeReplaceableByIsEmpty"})
+    @Test
     void replaceSingleExpressionInLambdaBody() {
         rewriteRun(
           spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
               @Override
               public J visitMethodInvocation(J.MethodInvocation method, ExecutionContext p) {
-                  if (method.getSimpleName().equals("toLowerCase")) {
+                  if ("toLowerCase".equals(method.getSimpleName())) {
                       return JavaTemplate.apply("#{any(java.lang.String)}.toUpperCase()", getCursor(),
                         method.getCoordinates().replace(), method.getSelect());
                   }
@@ -306,7 +304,7 @@ class JavaTemplateTest3Test implements RewriteTest {
           java(
             """
               import java.util.stream.Stream;
-              
+
               class Test {
                   static void method(Stream<String> obj) {
                       obj.filter(o -> o.toLowerCase().length() > 0);
@@ -315,7 +313,7 @@ class JavaTemplateTest3Test implements RewriteTest {
               """,
             """
               import java.util.stream.Stream;
-              
+
               class Test {
                   static void method(Stream<String> obj) {
                       obj.filter(o -> o.toUpperCase().length() > 0);
@@ -337,7 +335,7 @@ class JavaTemplateTest3Test implements RewriteTest {
               @Override
               public J visitMethodInvocation(J.MethodInvocation method, ExecutionContext p) {
                   if (enumEquals.matches(method)) {
-                      return t.apply(getCursor(), method.getCoordinates().replace(), method.getSelect(), method.getArguments().get(0));
+                      return t.apply(getCursor(), method.getCoordinates().replace(), method.getSelect(), method.getArguments().getFirst());
                   }
                   return super.visitMethodInvocation(method, p);
               }
@@ -345,7 +343,7 @@ class JavaTemplateTest3Test implements RewriteTest {
           java(
             """
               import java.util.stream.Stream;
-              
+
               class Test {
                   enum Abc {A,B,C}
                   static void method(Stream<Abc> obj) {
@@ -355,7 +353,7 @@ class JavaTemplateTest3Test implements RewriteTest {
               """,
             """
               import java.util.stream.Stream;
-              
+
               class Test {
                   enum Abc {A,B,C}
                   static void method(Stream<Abc> obj) {
@@ -374,11 +372,11 @@ class JavaTemplateTest3Test implements RewriteTest {
               @Override
               public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
                   J.MethodInvocation mi = super.visitMethodInvocation(method, ctx);
-                  if (mi.getSimpleName().equals("acceptInteger")) {
+                  if ("acceptInteger".equals(mi.getSimpleName())) {
                       mi = JavaTemplate.builder("acceptString(#{any()}.toString())")
                         .javaParser(JavaParser.fromJavaVersion())
                         .build()
-                        .apply(updateCursor(mi), mi.getCoordinates().replaceMethod(), mi.getArguments().get(0));
+                        .apply(updateCursor(mi), mi.getCoordinates().replaceMethod(), mi.getArguments().getFirst());
                       mi = mi.withName(mi.getName().withType(mi.getMethodType()));
                   }
                   return mi;
@@ -392,12 +390,13 @@ class JavaTemplateTest3Test implements RewriteTest {
                   public A acceptString(String s) { return this; }
                   public A someOtherMethod() { return this; }
               }
-              """, SourceSpec::skip
+              """,
+                SourceSpec::skip
           ),
           java(
             """
               package org.openrewrite;
-              
+
               public class Foo<N extends Number> {
                   void foo(N n) {
                       new A().someOtherMethod()
@@ -408,7 +407,7 @@ class JavaTemplateTest3Test implements RewriteTest {
               """,
             """
               package org.openrewrite;
-              
+
               public class Foo<N extends Number> {
                   void foo(N n) {
                       new A().someOtherMethod()
@@ -428,8 +427,8 @@ class JavaTemplateTest3Test implements RewriteTest {
               @Override
               public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext p) {
                   J.MethodInvocation m = super.visitMethodInvocation(method, p);
-                  if (m.getSimpleName().equals("method") && m.getArguments().size() == 2) {
-                      m = JavaTemplate.apply("#{anyArray(int)}", getCursor(), m.getCoordinates().replaceArguments(), m.getArguments().get(0));
+                  if ("method".equals(m.getSimpleName()) && m.getArguments().size() == 2) {
+                      m = JavaTemplate.apply("#{anyArray(int)}", getCursor(), m.getCoordinates().replaceArguments(), m.getArguments().getFirst());
                   }
                   return m;
               }
@@ -441,7 +440,8 @@ class JavaTemplateTest3Test implements RewriteTest {
                   public void method(int[] val) {}
                   public void method(int[] val1, String val2) {}
               }
-              """, SourceSpec::skip
+              """,
+                SourceSpec::skip
           ),
           java(
             """
@@ -480,7 +480,7 @@ class JavaTemplateTest3Test implements RewriteTest {
                       m = JavaTemplate.builder("#{any(java.lang.Integer)}")
                         .contextSensitive()
                         .build()
-                        .apply(getCursor(), coordinates, m.getArguments().get(0));
+                        .apply(getCursor(), coordinates, m.getArguments().getFirst());
                   }
                   return m;
               }
@@ -488,7 +488,7 @@ class JavaTemplateTest3Test implements RewriteTest {
           java(
             """
               import java.util.function.Predicate;
-              
+
               class A {
                   public Predicate<String> foo() {
                       return new Predicate<String>() {
@@ -503,7 +503,7 @@ class JavaTemplateTest3Test implements RewriteTest {
               """,
             """
               import java.util.function.Predicate;
-              
+
               class A {
                   public Predicate<String> foo() {
                       return new Predicate<String>() {
@@ -536,10 +536,10 @@ class JavaTemplateTest3Test implements RewriteTest {
           java(
             """
               import java.util.function.Function;
-              
+
               class Test {
                   Function<Object, String> toString = getToString();
-              
+
                   static Function<Object, String> getToString() {
                       return Object::toString;
                   }
@@ -547,10 +547,10 @@ class JavaTemplateTest3Test implements RewriteTest {
               """,
             """
               import java.util.function.Function;
-              
+
               class Test {
                   Function<Object, String> toString = Object::toString;
-              
+
                   static Function<Object, String> getToString() {
                       return Object::toString;
                   }
