@@ -21,36 +21,79 @@ import org.openrewrite.ExecutionContext;
 import org.openrewrite.Issue;
 import org.openrewrite.Recipe;
 import org.openrewrite.java.tree.J;
+import org.openrewrite.java.tree.Statement;
 import org.openrewrite.test.RewriteTest;
 
 import java.util.ArrayList;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
 import static org.openrewrite.java.Assertions.java;
 import static org.openrewrite.test.RewriteTest.toRecipe;
 
-@SuppressWarnings({"SimplifyStreamApiCallChains", "ConstantConditions", "UnnecessaryLocalVariable", "LocalVariableUsedAndDeclaredInDifferentSwitchBranches", "Convert2Diamond", "UnusedAssignment"})
+@SuppressWarnings({"SimplifyStreamApiCallChains", "ConstantConditions", "UnnecessaryLocalVariable", "LocalVariableUsedAndDeclaredInDifferentSwitchBranches", "Convert2Diamond", "UnusedAssignment", "MismatchedReadAndWriteOfArray"})
 class RenameVariableTest implements RewriteTest {
+
+    @DocumentExample
+    @Test
+    void doNotRenameForLoopVariables() {
+        rewriteRun(
+          spec -> spec.recipe(renameVariableTest("v", "VALUE", true)),
+          java(
+            """
+              package org.openrewrite;
+              
+              public class A {
+                  int fooA() {
+                      v++;
+                      // creates new scope owned by for loop.
+                      for (int v = 0; v < 10; ++v) {
+                          int x = v + 1;
+                      }
+                      v++;
+                  }
+                  // v is scoped to classDeclaration regardless of statement order.
+                  public int v = 1;
+              }
+              """,
+            """
+              package org.openrewrite;
+              
+              public class A {
+                  int fooA() {
+                      VALUE++;
+                      // creates new scope owned by for loop.
+                      for (int v = 0; v < 10; ++v) {
+                          int x = v + 1;
+                      }
+                      VALUE++;
+                  }
+                  // v is scoped to classDeclaration regardless of statement order.
+                  public int VALUE = 1;
+              }
+              """
+          )
+        );
+    }
+
     private static Recipe renameVariableTest(String hasName, String toName, boolean includeMethodParameters) {
         return toRecipe(() -> new JavaVisitor<>() {
             @Override
             public J visitClassDeclaration(J.ClassDeclaration classDecl, ExecutionContext ctx) {
-                if (classDecl.getSimpleName().equals("A")) {
-                    List<J.VariableDeclarations> variableDecls = classDecl.getBody().getStatements().stream()
+                if ("A".equals(classDecl.getSimpleName())) {
+                    List<J.VariableDeclarations> variableDecls = new ArrayList<>(classDecl.getBody().getStatements().stream()
                       .filter(J.VariableDeclarations.class::isInstance)
                       .map(J.VariableDeclarations.class::cast)
-                      .collect(toList());
+                      .toList());
 
                     if (includeMethodParameters) {
                         variableDecls.addAll(
-                          classDecl.getBody().getStatements().stream()
+                            classDecl.getBody().getStatements().stream()
                             .filter(J.MethodDeclaration.class::isInstance)
                             .map(J.MethodDeclaration.class::cast)
                             .flatMap(it -> it.getParameters().stream())
                             .filter(J.VariableDeclarations.class::isInstance)
                             .map(J.VariableDeclarations.class::cast)
-                            .collect(toList())
+                            .toList()
                         );
                     }
 
@@ -79,7 +122,7 @@ class RenameVariableTest implements RewriteTest {
             """
               public class A {
                   private String name;
-                  
+              
                   /**
                    * The length of <code>name</code> added to the length of {@link #name}.
                    *
@@ -93,7 +136,7 @@ class RenameVariableTest implements RewriteTest {
             """
               public class A {
                   private String _name;
-                  
+              
                   /**
                    * The length of <code>name</code> added to the length of {@link #_name}.
                    *
@@ -180,11 +223,11 @@ class RenameVariableTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-                            
+              
               public class A<T> {
                   private String _val;
                   private String name;
-                   
+              
                   A(String name, String _val) {
                       this._val = _val;
                       this.name = name;
@@ -193,11 +236,11 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-                            
+              
               public class A<T> {
                   private String v;
                   private String name;
-                   
+              
                   A(String name, String v) {
                       this.v = v;
                       this.name = name;
@@ -215,7 +258,7 @@ class RenameVariableTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-
+              
               public class A {
                   int fooA() {
                       v++;
@@ -227,48 +270,6 @@ class RenameVariableTest implements RewriteTest {
                   }
                   // v is scoped to classDeclaration regardless of statement order.
                   public int v = 1;
-              }
-              """
-          )
-        );
-    }
-
-    @DocumentExample
-    @Test
-    void doNotRenameForLoopVariables() {
-        rewriteRun(
-          spec -> spec.recipe(renameVariableTest("v", "VALUE", true)),
-          java(
-            """
-              package org.openrewrite;
-
-              public class A {
-                  int fooA() {
-                      v++;
-                      // creates new scope owned by for loop.
-                      for (int v = 0; v < 10; ++v) {
-                          int x = v + 1;
-                      }
-                      v++;
-                  }
-                  // v is scoped to classDeclaration regardless of statement order.
-                  public int v = 1;
-              }
-              """,
-            """
-              package org.openrewrite;
-
-              public class A {
-                  int fooA() {
-                      VALUE++;
-                      // creates new scope owned by for loop.
-                      for (int v = 0; v < 10; ++v) {
-                          int x = v + 1;
-                      }
-                      VALUE++;
-                  }
-                  // v is scoped to classDeclaration regardless of statement order.
-                  public int VALUE = 1;
               }
               """
           )
@@ -282,7 +283,7 @@ class RenameVariableTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-
+              
               public class A {
                   int fooA() {
                       // refers to class declaration scope.
@@ -298,7 +299,7 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-
+              
               public class A {
                   int fooA() {
                       // refers to class declaration scope.
@@ -323,11 +324,11 @@ class RenameVariableTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-
+              
               public class A {
                   // Scoped to ClassDeclaration regardless of statement order.
                   public int v = 1;
-
+              
                   class X {
                       int v = 0;
                   }
@@ -335,11 +336,11 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-
+              
               public class A {
                   // Scoped to ClassDeclaration regardless of statement order.
                   public int VALUE = 1;
-
+              
                   class X {
                       int v = 0;
                   }
@@ -356,10 +357,10 @@ class RenameVariableTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-
+              
               public class A {
                   public int v = 0;
-
+              
                   class X {
                       int foo() {
                           v = 10;
@@ -370,10 +371,10 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-
+              
               public class A {
                   public int VALUE = 0;
-
+              
                   class X {
                       int foo() {
                           VALUE = 10;
@@ -393,13 +394,13 @@ class RenameVariableTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-
+              
               import java.io.FileInputStream;
               import java.io.FileDescriptor;
-
+              
               public class A {
                   public int v = 0;
-
+              
                   int foo() {
                       try (FileInputStream fs = new FileInputStream("file")) {
                           FileDescriptor fd = fs.getFD();
@@ -413,13 +414,13 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-
+              
               import java.io.FileInputStream;
               import java.io.FileDescriptor;
-
+              
               public class A {
                   public int VALUE = 0;
-
+              
                   int foo() {
                       try (FileInputStream fs = new FileInputStream("file")) {
                           FileDescriptor fd = fs.getFD();
@@ -442,13 +443,13 @@ class RenameVariableTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-
+              
               import java.io.FileDescriptor;
               import java.io.FileInputStream;
-
+              
               public class A {
                   public int v = 0;
-
+              
                   int foo() {
                       try {
                           v++;
@@ -463,13 +464,13 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-
+              
               import java.io.FileDescriptor;
               import java.io.FileInputStream;
-
+              
               public class A {
                   public int VALUE = 0;
-
+              
                   int foo() {
                       try {
                           VALUE++;
@@ -493,13 +494,13 @@ class RenameVariableTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-
+              
               import java.io.FileDescriptor;
               import java.io.FileInputStream;
-
+              
               public class A {
                   public int v = 0;
-
+              
                   int foo() {
                       FileDescriptor fd;
                       try (FileInputStream v = new FileInputStream("file")) {
@@ -513,13 +514,13 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-
+              
               import java.io.FileDescriptor;
               import java.io.FileInputStream;
-
+              
               public class A {
                   public int VALUE = 0;
-
+              
                   int foo() {
                       FileDescriptor fd;
                       try (FileInputStream v = new FileInputStream("file")) {
@@ -542,16 +543,16 @@ class RenameVariableTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-
+              
               import java.util.function.BiFunction;
-
+              
               public class A {
                   public Integer v = 1;
-
+              
                   int onlyChangeInScope() {
                       BiFunction<String, Integer, Integer> x = (String j, Integer k) ->
                             v == null ? 42 : v + 41;
-
+              
                       // Class scope.
                       v = 10;
                       // Method scope.
@@ -562,16 +563,16 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-
+              
               import java.util.function.BiFunction;
-
+              
               public class A {
                   public Integer VALUE = 1;
-
+              
                   int onlyChangeInScope() {
                       BiFunction<String, Integer, Integer> x = (String j, Integer k) ->
                             VALUE == null ? 42 : VALUE + 41;
-
+              
                       // Class scope.
                       VALUE = 10;
                       // Method scope.
@@ -591,16 +592,16 @@ class RenameVariableTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-
+              
               import java.util.function.BiFunction;
-
+              
               public class A {
                   public Integer v = 1;
-
+              
                   int onlyChangeInScope() {
                       BiFunction<String, Integer, Integer> x = (String k, Integer v) ->
                       v == null ? 42 : v + 41;
-
+              
                       // Class scope.
                       v = 10;
                   }
@@ -608,16 +609,16 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-
+              
               import java.util.function.BiFunction;
-
+              
               public class A {
                   public Integer VALUE = 1;
-
+              
                   int onlyChangeInScope() {
                       BiFunction<String, Integer, Integer> x = (String k, Integer v) ->
                       v == null ? 42 : v + 41;
-
+              
                       // Class scope.
                       VALUE = 10;
                   }
@@ -635,10 +636,10 @@ class RenameVariableTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-
+              
               public class A {
                   public int v = 1;
-
+              
                   int newScopeDoNotChange() {
                       switch (v) {
                           case 1:
@@ -660,10 +661,10 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-
+              
               public class A {
                   public int VALUE = 1;
-
+              
                   int newScopeDoNotChange() {
                       switch (VALUE) {
                           case 1:
@@ -694,10 +695,10 @@ class RenameVariableTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-
+              
               public class A {
                   public int v = 1;
-
+              
                   int newScopeDoNotChange(int v) {
                       return v;
                   }
@@ -712,10 +713,10 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-
+              
               public class A {
                   public int VALUE = 1;
-
+              
                   int newScopeDoNotChange(int v) {
                       return v;
                   }
@@ -748,7 +749,7 @@ class RenameVariableTest implements RewriteTest {
             """
               public class A {
                   public ClassWithPublicField v = new ClassWithPublicField();
-
+              
                   int getNumberTwice() {
                       v.publicField = this.v.publicField + 10;
                       return v.publicField;
@@ -758,7 +759,7 @@ class RenameVariableTest implements RewriteTest {
             """
               public class A {
                   public ClassWithPublicField VALUE = new ClassWithPublicField();
-
+              
                   int getNumberTwice() {
                       VALUE.publicField = this.VALUE.publicField + 10;
                       return VALUE.publicField;
@@ -778,7 +779,7 @@ class RenameVariableTest implements RewriteTest {
             """
               public class A {
                   private int v;
-
+              
                   static A getInstance() {
                       A a = new A();
                       a.v = 12;
@@ -789,7 +790,7 @@ class RenameVariableTest implements RewriteTest {
             """
               public class A {
                   private int VALUE;
-
+              
                   static A getInstance() {
                       A a = new A();
                       a.VALUE = 12;
@@ -809,9 +810,9 @@ class RenameVariableTest implements RewriteTest {
               @Override
               public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
                   if (getCursor().getParentTreeCursor().getValue() instanceof J.MethodDeclaration) {
-                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "n2"));
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "n2"));
                   } else if (!(getCursor().getParentTreeCursor().getParentTreeCursor().getValue() instanceof J.ClassDeclaration)) {
-                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().get(0), "n1"));
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "n1"));
                   }
                   return super.visitVariableDeclarations(multiVariable, ctx);
               }
@@ -820,7 +821,7 @@ class RenameVariableTest implements RewriteTest {
             """
               public class B {
                   int n;
-                            
+              
                   {
                       n++; // do not change.
                       int n;
@@ -829,7 +830,7 @@ class RenameVariableTest implements RewriteTest {
                       if(n + 1 == 2) {}
                       n++;
                   }
-                 
+              
                   public int foo(int n) {
                       return n + this.n;
                   }
@@ -838,7 +839,7 @@ class RenameVariableTest implements RewriteTest {
             """
               public class B {
                   int n;
-                            
+              
                   {
                       n++; // do not change.
                       int n1;
@@ -847,7 +848,7 @@ class RenameVariableTest implements RewriteTest {
                       if(n1 + 1 == 2) {}
                       n1++;
                   }
-                 
+              
                   public int foo(int n2) {
                       return n2 + this.n;
                   }
@@ -864,7 +865,7 @@ class RenameVariableTest implements RewriteTest {
           java(
             """
               package org.openrewrite;
-
+              
               public class A {
                   public boolean contains(String string, String c) {
                       return string.contains(c);
@@ -873,7 +874,7 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-
+              
               public class A {
                   public boolean contains(String string, String foobar) {
                       return string.contains(foobar);
@@ -884,15 +885,15 @@ class RenameVariableTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/3051")
+    @Test
     void doNotRenameMethods() {
         rewriteRun(
           spec -> spec.recipe(renameVariableTest("contains", "foobar", true)),
           java(
             """
               package org.openrewrite;
-
+              
               public class A {
                   public boolean contains(String string, String contains) {
                       return string.contains(contains) && string.contains(string);
@@ -901,7 +902,7 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               package org.openrewrite;
-
+              
               public class A {
                   public boolean contains(String string, String foobar) {
                       return string.contains(foobar) && string.contains(string);
@@ -956,22 +957,46 @@ class RenameVariableTest implements RewriteTest {
         );
     }
 
+    @Issue("https://github.com/openrewrite/rewrite/issues/5843")
     @Test
+    void doNotRenameClassLiterals() {
+        rewriteRun(
+          spec -> spec.recipe(renameVariableTest("FooBarBaz", "fooBarBaz", true)),
+          java(
+            """
+              class FooBarBaz {}
+              class A {
+                FooBarBaz FooBarBaz = new FooBarBaz();
+                Class<?> clazz = FooBarBaz.class;
+              }
+              """,
+            """
+              class FooBarBaz {}
+              class A {
+                FooBarBaz fooBarBaz = new FooBarBaz();
+                Class<?> clazz = FooBarBaz.class;
+              }
+              """
+          )
+        );
+    }
+
     @Issue("https://github.com/openrewrite/rewrite/issues/4059")
+    @Test
     void renameTypeCastedField() {
         rewriteRun(
           spec -> spec.recipe(renameVariableTest("objArray", "objects", false)),
           java(
             """
               import java.util.Arrays;
-
+              
               public class A {
                 private Object[] objArray;
-
+              
                 public boolean isEqualTo(Object object) {
                   return Arrays.equals(objArray, ((A) object).objArray);
                 }
-
+              
                 public int length() {
                   return objArray.length;
                 }
@@ -979,16 +1004,529 @@ class RenameVariableTest implements RewriteTest {
               """,
             """
               import java.util.Arrays;
-
+              
               public class A {
                 private Object[] objects;
-
+              
                 public boolean isEqualTo(Object object) {
                   return Arrays.equals(objects, ((A) object).objects);
                 }
-
+              
                 public int length() {
                   return objects.length;
+                }
+              }
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/pull/5369")
+    @Test
+    void hiddenVariablesGetRenamedCorrectly() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
+              @Override
+              public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
+                  if (getCursor().getParentTreeCursor().getValue() instanceof J.MethodDeclaration) {
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "n1"));
+                  }
+                  return super.visitVariableDeclarations(multiVariable, ctx);
+              }
+          })),
+          java(
+            """
+              public class A {
+                private int n;
+              
+                public A setN(int n) {
+                  this.n = n;
+                  return this;
+                }
+              }
+              """,
+            """
+              public class A {
+                private int n;
+              
+                public A setN(int n1) {
+                  this.n = n1;
+                  return this;
+                }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void hiddenVariablesHierarchyRenameBase() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
+              @Override
+              public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
+                  J target = getCursor().getParentTreeCursor().getParentTreeCursor().getValue();
+                  if ("hidden".equals(multiVariable.getVariables().getFirst().getSimpleName()) &&
+                    target instanceof J.ClassDeclaration && "Base".equals(((J.ClassDeclaration) target).getSimpleName())) {
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "changed"));
+                  }
+                  return super.visitVariableDeclarations(multiVariable, ctx);
+              }
+          })),
+          java(
+            """
+              class Base {
+                  protected Base visible;
+                  protected Base hidden;
+              
+                  Base base() {
+                      return hidden;
+                  }
+              }
+              
+              class Middle extends Base {
+                  Middle middle() {
+                      return (Middle) hidden;
+                  }
+              }
+              
+              class Extended extends Middle {
+                  private Base hidden;
+              
+                  Extended extended() {
+                      return (Extended) hidden;
+                  }
+              
+                  public Extended test(Base hidden) {
+                      this.hidden = super.hidden;
+                      this.hidden = hidden.hidden;
+                      this.hidden = ((Middle) hidden).hidden;
+                      this.hidden = ((Extended) hidden).hidden;
+                      base().hidden = this;
+                      middle().hidden = this;
+                      extended().hidden = this;
+                      super.hidden = visible.hidden;
+                      visible.hidden = hidden;
+                      hidden.hidden.hidden = hidden.hidden = this.hidden = hidden;
+                      return this;
+                  }
+              }
+              """,
+            """
+              class Base {
+                  protected Base visible;
+                  protected Base changed;
+              
+                  Base base() {
+                      return changed;
+                  }
+              }
+              
+              class Middle extends Base {
+                  Middle middle() {
+                      return (Middle) changed;
+                  }
+              }
+              
+              class Extended extends Middle {
+                  private Base hidden;
+              
+                  Extended extended() {
+                      return (Extended) hidden;
+                  }
+              
+                  public Extended test(Base hidden) {
+                      this.hidden = super.changed;
+                      this.hidden = hidden.changed;
+                      this.hidden = ((Middle) hidden).changed;
+                      this.hidden = ((Extended) hidden).hidden;
+                      base().changed = this;
+                      middle().changed = this;
+                      extended().hidden = this;
+                      super.changed = visible.changed;
+                      visible.changed = hidden;
+                      hidden.changed.changed = hidden.changed = this.hidden = hidden;
+                      return this;
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void hiddenVariablesHierarchyRenameExtended() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
+              @Override
+              public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
+                  J target = getCursor().getParentTreeCursor().getParentTreeCursor().getValue();
+                  if ("hidden".equals(multiVariable.getVariables().getFirst().getSimpleName()) &&
+                    target instanceof J.ClassDeclaration && "Extended".equals(((J.ClassDeclaration) target).getSimpleName())) {
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "changed"));
+                  }
+                  return super.visitVariableDeclarations(multiVariable, ctx);
+              }
+          })),
+          java(
+            """
+              class Base {
+                  protected Base visible;
+                  protected Base hidden;
+              
+                  Base base() {
+                      return hidden;
+                  }
+              }
+              
+              class Middle extends Base {
+                  Middle middle() {
+                      return (Middle) hidden;
+                  }
+              }
+              
+              class Extended extends Middle {
+                  private Base hidden;
+              
+                  Extended extended() {
+                      return (Extended) hidden;
+                  }
+              
+                  public Extended test(Base hidden) {
+                      this.hidden = super.hidden;
+                      this.hidden = hidden.hidden;
+                      this.hidden = ((Middle) hidden).hidden;
+                      this.hidden = ((Extended) hidden).hidden;
+                      base().hidden = this;
+                      middle().hidden = this;
+                      extended().hidden = this;
+                      super.hidden = visible.hidden;
+                      visible.hidden = hidden;
+                      hidden.hidden.hidden = hidden.hidden = this.hidden = hidden;
+                      return this;
+                  }
+              }
+              """,
+            """
+              class Base {
+                  protected Base visible;
+                  protected Base hidden;
+              
+                  Base base() {
+                      return hidden;
+                  }
+              }
+              
+              class Middle extends Base {
+                  Middle middle() {
+                      return (Middle) hidden;
+                  }
+              }
+              
+              class Extended extends Middle {
+                  private Base changed;
+              
+                  Extended extended() {
+                      return (Extended) changed;
+                  }
+              
+                  public Extended test(Base hidden) {
+                      this.changed = super.hidden;
+                      this.changed = hidden.hidden;
+                      this.changed = ((Middle) hidden).hidden;
+                      this.changed = ((Extended) hidden).changed;
+                      base().hidden = this;
+                      middle().hidden = this;
+                      extended().changed = this;
+                      super.hidden = visible.hidden;
+                      visible.hidden = hidden;
+                      hidden.hidden.hidden = hidden.hidden = this.changed = hidden;
+                      return this;
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void hiddenVariablesHierarchyRenameLocal() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
+              @Override
+              public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
+                  J target = getCursor().getParentTreeCursor().getValue();
+                  if ("hidden".equals(multiVariable.getVariables().getFirst().getSimpleName()) &&
+                    target instanceof J.MethodDeclaration) {
+                      doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "changed"));
+                  }
+                  return super.visitVariableDeclarations(multiVariable, ctx);
+              }
+          })),
+          java(
+            """
+              class Base {
+                  protected Base visible;
+                  protected Base hidden;
+              
+                  Base base() {
+                      return hidden;
+                  }
+              }
+              
+              class Middle extends Base {
+                  Middle middle() {
+                      return (Middle) hidden;
+                  }
+              }
+              
+              class Extended extends Middle {
+                  private Base hidden;
+              
+                  Extended extended() {
+                      return (Extended) hidden;
+                  }
+              
+                  public Extended test(Base hidden) {
+                      this.hidden = super.hidden;
+                      this.hidden = hidden.hidden;
+                      this.hidden = ((Middle) hidden).hidden;
+                      this.hidden = ((Extended) hidden).hidden;
+                      base().hidden = this;
+                      middle().hidden = this;
+                      extended().hidden = this;
+                      super.hidden = visible.hidden;
+                      visible.hidden = hidden;
+                      hidden.hidden.hidden = hidden.hidden = this.hidden = hidden;
+                      return this;
+                  }
+              }
+              """,
+            """
+              class Base {
+                  protected Base visible;
+                  protected Base hidden;
+              
+                  Base base() {
+                      return hidden;
+                  }
+              }
+              
+              class Middle extends Base {
+                  Middle middle() {
+                      return (Middle) hidden;
+                  }
+              }
+              
+              class Extended extends Middle {
+                  private Base hidden;
+              
+                  Extended extended() {
+                      return (Extended) hidden;
+                  }
+              
+                  public Extended test(Base changed) {
+                      this.hidden = super.hidden;
+                      this.hidden = changed.hidden;
+                      this.hidden = ((Middle) changed).hidden;
+                      this.hidden = ((Extended) changed).hidden;
+                      base().hidden = this;
+                      middle().hidden = this;
+                      extended().hidden = this;
+                      super.hidden = visible.hidden;
+                      visible.hidden = changed;
+                      changed.hidden.hidden = changed.hidden = this.hidden = changed;
+                      return this;
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/pull/5369")
+    @Test
+    void hiddenVariablesGetRenamedCorrectlyInBlocks() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
+              @Override
+              public J visitVariableDeclarations(J.VariableDeclarations multiVariable, ExecutionContext ctx) {
+                  if (multiVariable.getVariables().getFirst().isField(getCursor()) || multiVariable.getPrefix().getComments().isEmpty()) {
+                      return multiVariable;
+                  }
+                  doAfterVisit(new RenameVariable<>(multiVariable.getVariables().getFirst(), "n1"));
+                  return super.visitVariableDeclarations(multiVariable, ctx);
+              }
+          })),
+          java(
+            """
+              public class A {
+                  int n;
+              
+                  public void blocks() {
+                      {
+                          //only this one is in scope
+                          int n = 0;
+                          int x = n;
+                      }
+                      {
+                          int n = 0;
+                          int x = n;
+                      }
+                  }
+              }
+              """,
+            """
+              public class A {
+                  int n;
+              
+                  public void blocks() {
+                      {
+                          //only this one is in scope
+                          int n1 = 0;
+                          int x = n1;
+                      }
+                      {
+                          int n = 0;
+                          int x = n;
+                      }
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/pull/5369")
+    @Test
+    void hiddenVariablesGetRenamedCorrectlyInClass() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaVisitor<>() {
+
+              @Override
+              public J visitBlock(J.Block block, ExecutionContext ctx) {
+                  if (getCursor().getParent() != null && getCursor().getParent().getValue() instanceof J.ClassDeclaration) {
+                      for (Statement statement : block.getStatements()) {
+                          if (statement instanceof J.VariableDeclarations) {
+                              doAfterVisit(new RenameVariable<>(((J.VariableDeclarations) statement).getVariables().getFirst(), "n1"));
+                          }
+                      }
+                  }
+                  return super.visitBlock(block, ctx);
+              }
+          })),
+          java(
+            """
+              public class A {
+                  int n;
+              
+                  public void blocks() {
+                      {
+                          int n = 0;
+                          int x = n;
+                      }
+                      {
+                          int n = 0;
+                          int x = n;
+                      }
+                  }
+              }
+              """,
+            """
+              public class A {
+                  int n1;
+              
+                  public void blocks() {
+                      {
+                          int n = 0;
+                          int x = n;
+                      }
+                      {
+                          int n = 0;
+                          int x = n;
+                      }
+                  }
+              }
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/pull/3051")
+    @Test
+    void mustNotRenameMethod() {
+        rewriteRun(
+          spec -> spec.recipe(renameVariableTest("foo", "baz", false)),
+          // language=java
+          java(
+            """
+               package com.helloworld;
+
+               public class A {
+                 private final String foo = "";
+
+                 public String foo() {
+                  return this.foo;
+                 }
+              }""",
+            """
+               package com.helloworld;
+
+               public class A {
+                 private final String baz = "";
+
+                 public String foo() {
+                  return this.baz;
+                 }
+              }
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/issues/6153")
+    @Test
+    void renameVariableWithLambdaAssignedToField() {
+        rewriteRun(
+          spec -> spec.recipe(toRecipe(() -> new JavaIsoVisitor<>() {
+              @Override
+              public J.VariableDeclarations.NamedVariable visitVariable(
+                J.VariableDeclarations.NamedVariable variable, ExecutionContext executionContext) {
+                  if ("foo".equals(variable.getSimpleName())) {
+                      doAfterVisit(new RenameVariable<>(variable, "FOO"));
+                  }
+                  return super.visitVariable(variable, executionContext);
+              }
+          })),
+          java(
+            """
+              import java.util.function.BiFunction;
+
+              public class Foo {
+                public BiFunction<String, String, Boolean> baz;
+                public String baz2;
+              }
+
+              """
+          ),
+          java(
+            """
+              public class Bar {
+                private static final Foo foo = new Foo();
+
+                public void bar() {
+                  foo.baz = (a, b) -> true;
+                  foo.baz2 = "hello";
+                }
+              }
+              """,
+            """
+              public class Bar {
+                private static final Foo FOO = new Foo();
+
+                public void bar() {
+                  FOO.baz = (a, b) -> true;
+                  FOO.baz2 = "hello";
                 }
               }
               """
