@@ -32,7 +32,7 @@ import org.openrewrite.test.TypeValidation;
 
 import java.io.ByteArrayInputStream;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -45,18 +45,18 @@ import static org.openrewrite.java.tree.JavaType.GenericTypeVariable.Variance.*;
 import static org.openrewrite.kotlin.Assertions.kotlin;
 
 @SuppressWarnings("ConstantConditions")
-public class KotlinTypeMappingTest {
+class KotlinTypeMappingTest {
     private static final String goat = StringUtils.readFully(KotlinTypeMappingTest.class.getResourceAsStream("/KotlinTypeGoat.kt"));
     private static final K.CompilationUnit cu;
     private static final K.ClassDeclaration goatClassDeclaration;
 
     static {
-        InMemoryExecutionContext ctx = new InMemoryExecutionContext();
+        var ctx = new InMemoryExecutionContext();
         ctx.putMessage(REQUIRE_PRINT_EQUALS_INPUT, false);
         cu = (K.CompilationUnit) KotlinParser.builder()
             .logCompilationWarningsAndErrors(true)
             .build()
-            .parseInputs(singletonList(new Parser.Input(Paths.get("KotlinTypeGoat.kt"), () -> new ByteArrayInputStream(goat.getBytes(StandardCharsets.UTF_8)))), null, ctx)
+            .parseInputs(singletonList(new Parser.Input(Path.of("KotlinTypeGoat.kt"), () -> new ByteArrayInputStream(goat.getBytes(StandardCharsets.UTF_8)))), null, ctx)
             .findFirst()
             .orElseThrow();
 
@@ -91,7 +91,7 @@ public class KotlinTypeMappingTest {
     }
 
     public JavaType firstMethodParameter(String methodName) {
-        return methodType(methodName).getParameterTypes().get(0);
+        return methodType(methodName).getParameterTypes().getFirst();
     }
 
     @Test
@@ -102,7 +102,7 @@ public class KotlinTypeMappingTest {
     @Test
     void fieldType() {
         K.Property property = getProperty("field");
-        J.VariableDeclarations.NamedVariable variable = property.getVariableDeclarations().getVariables().get(0);
+        J.VariableDeclarations.NamedVariable variable = property.getVariableDeclarations().getVariables().getFirst();
         J.Identifier id = variable.getName();
         assertThat(variable.getType()).isEqualTo(id.getType());
         assertThat(id.getFieldType()).isInstanceOf(JavaType.Variable.class);
@@ -150,13 +150,13 @@ public class KotlinTypeMappingTest {
         assertThat(md.getMethodType().toString())
           .isEqualTo("org.openrewrite.kotlin.KotlinTypeGoatKt{name=function,return=kotlin.Unit,parameters=[org.openrewrite.kotlin.C]}");
 
-        J.VariableDeclarations.NamedVariable nv = ((J.VariableDeclarations) md.getParameters().get(0)).getVariables().get(0);
+        J.VariableDeclarations.NamedVariable nv = ((J.VariableDeclarations) md.getParameters().getFirst()).getVariables().getFirst();
         assertThat(nv.getVariableType()).isEqualTo(nv.getName().getFieldType());
         assertThat(nv.getType().toString()).isEqualTo("org.openrewrite.kotlin.C");
         assertThat(nv.getVariableType().toString())
           .isEqualTo("org.openrewrite.kotlin.KotlinTypeGoatKt{name=function,return=kotlin.Unit,parameters=[org.openrewrite.kotlin.C]}{name=arg,type=org.openrewrite.kotlin.C}");
 
-        J.VariableDeclarations.NamedVariable inMethod = ((J.VariableDeclarations) md.getBody().getStatements().get(0)).getVariables().get(0);
+        J.VariableDeclarations.NamedVariable inMethod = ((J.VariableDeclarations) md.getBody().getStatements().getFirst()).getVariables().getFirst();
         assertThat(inMethod.getVariableType()).isEqualTo(inMethod.getName().getFieldType());
         assertThat(inMethod.getType().toString()).isEqualTo("kotlin.Int");
         assertThat(inMethod.getVariableType().toString())
@@ -170,13 +170,13 @@ public class KotlinTypeMappingTest {
 
     @Test
     void className() {
-        JavaType.Class clazz = (JavaType.Class) this.firstMethodParameter("clazz");
+        var clazz = (JavaType.Class) this.firstMethodParameter("clazz");
         assertThat(TypeUtils.asFullyQualified(clazz).getFullyQualifiedName()).isEqualTo("org.openrewrite.kotlin.C");
     }
 
     @Test
     void interfacesContainImplicitAbstractFlag() {
-        JavaType.Class clazz = (JavaType.Class) firstMethodParameter("clazz");
+        var clazz = (JavaType.Class) firstMethodParameter("clazz");
         JavaType.Method methodType = methodType("clazz");
         assertThat(clazz.getFlags()).contains(Flag.Abstract);
         assertThat(methodType.getFlags()).contains(Flag.Abstract);
@@ -190,16 +190,16 @@ public class KotlinTypeMappingTest {
 
     @Test
     void parameterized() {
-        JavaType.Parameterized parameterized = (JavaType.Parameterized) firstMethodParameter("parameterized");
+        var parameterized = (JavaType.Parameterized) firstMethodParameter("parameterized");
         assertThat(parameterized.getType().getFullyQualifiedName()).isEqualTo("org.openrewrite.kotlin.PT");
-        assertThat(TypeUtils.asFullyQualified(parameterized.getTypeParameters().get(0)).getFullyQualifiedName()).isEqualTo("org.openrewrite.kotlin.C");
+        assertThat(TypeUtils.asFullyQualified(parameterized.getTypeParameters().getFirst()).getFullyQualifiedName()).isEqualTo("org.openrewrite.kotlin.C");
 
         J.MethodDeclaration md = goatClassDeclaration.getClassDeclaration().getBody().getStatements().stream()
-          .filter(it -> (it instanceof J.MethodDeclaration) && "parameterized".equals(((J.MethodDeclaration) it).getSimpleName()))
+          .filter(it -> (it instanceof J.MethodDeclaration md1) && "parameterized".equals(md1.getSimpleName()))
           .map(J.MethodDeclaration.class::cast).findFirst().orElseThrow();
         assertThat(md.getMethodType().toString())
           .isEqualTo("org.openrewrite.kotlin.KotlinTypeGoat{name=parameterized,return=org.openrewrite.kotlin.PT<org.openrewrite.kotlin.C>,parameters=[org.openrewrite.kotlin.PT<org.openrewrite.kotlin.C>]}");
-        J.VariableDeclarations vd = (J.VariableDeclarations) md.getParameters().get(0);
+        var vd = (J.VariableDeclarations) md.getParameters().getFirst();
         assertThat(vd.getTypeExpression().getType().toString())
           .isEqualTo("org.openrewrite.kotlin.PT<org.openrewrite.kotlin.C>");
         assertThat(((J.ParameterizedType) vd.getTypeExpression()).getClazz().getType().toString())
@@ -208,41 +208,41 @@ public class KotlinTypeMappingTest {
 
     @Test
     void primitive() {
-        JavaType.Class kotlinPrimitive = (JavaType.Class) firstMethodParameter("primitive");
+        var kotlinPrimitive = (JavaType.Class) firstMethodParameter("primitive");
         assertThat(kotlinPrimitive.getFullyQualifiedName()).isEqualTo("kotlin.Int");
     }
 
     @Test
     void generic() {
-        JavaType.GenericTypeVariable generic = (JavaType.GenericTypeVariable) TypeUtils.asParameterized(firstMethodParameter("generic")).getTypeParameters().get(0);
+        var generic = (JavaType.GenericTypeVariable) TypeUtils.asParameterized(firstMethodParameter("generic")).getTypeParameters().getFirst();
         assertThat(generic.getName()).isEqualTo("?");
         assertThat(generic.getVariance()).isEqualTo(COVARIANT);
-        assertThat(TypeUtils.asFullyQualified(generic.getBounds().get(0)).getFullyQualifiedName()).isEqualTo("org.openrewrite.kotlin.C");
+        assertThat(TypeUtils.asFullyQualified(generic.getBounds().getFirst()).getFullyQualifiedName()).isEqualTo("org.openrewrite.kotlin.C");
     }
 
     @Test
     void genericContravariant() {
-        JavaType.GenericTypeVariable generic = (JavaType.GenericTypeVariable) TypeUtils.asParameterized(firstMethodParameter("genericContravariant")).getTypeParameters().get(0);
+        var generic = (JavaType.GenericTypeVariable) TypeUtils.asParameterized(firstMethodParameter("genericContravariant")).getTypeParameters().getFirst();
         assertThat(generic.getName()).isEqualTo("?");
         assertThat(generic.getVariance()).isEqualTo(CONTRAVARIANT);
-        assertThat(TypeUtils.asFullyQualified(generic.getBounds().get(0)).getFullyQualifiedName()).
+        assertThat(TypeUtils.asFullyQualified(generic.getBounds().getFirst()).getFullyQualifiedName()).
           isEqualTo("org.openrewrite.kotlin.C");
     }
 
     @Test
     void genericMultipleBounds() {
         List<JavaType> typeParameters = goatType.getTypeParameters();
-        JavaType.GenericTypeVariable generic = (JavaType.GenericTypeVariable) typeParameters.get(typeParameters.size() - 1);
+        var generic = (JavaType.GenericTypeVariable) typeParameters.getLast();
         assertThat(generic.getName()).isEqualTo("S");
         assertThat(generic.getVariance()).isEqualTo(COVARIANT);
-        assertThat(TypeUtils.asFullyQualified(generic.getBounds().get(0)).getFullyQualifiedName()).isEqualTo("org.openrewrite.kotlin.PT");
+        assertThat(TypeUtils.asFullyQualified(generic.getBounds().getFirst()).getFullyQualifiedName()).isEqualTo("org.openrewrite.kotlin.PT");
         assertThat(TypeUtils.asFullyQualified(generic.getBounds().get(1)).getFullyQualifiedName()).
           isEqualTo("org.openrewrite.kotlin.C");
     }
 
     @Test
     void genericUnbounded() {
-        JavaType.GenericTypeVariable generic = (JavaType.GenericTypeVariable) TypeUtils.asParameterized(firstMethodParameter("genericUnbounded")).getTypeParameters().get(0);
+        var generic = (JavaType.GenericTypeVariable) TypeUtils.asParameterized(firstMethodParameter("genericUnbounded")).getTypeParameters().getFirst();
         assertThat(generic.getName()).isEqualTo("U");
         assertThat(generic.getVariance()).isEqualTo(INVARIANT);
         assertThat(generic.getBounds()).isEmpty();
@@ -250,14 +250,14 @@ public class KotlinTypeMappingTest {
 
     @Test
     void genericRecursive() {
-        JavaType.Parameterized param = (JavaType.Parameterized) firstMethodParameter("genericRecursive");
-        JavaType typeParam = param.getTypeParameters().get(0);
-        JavaType.GenericTypeVariable generic = (JavaType.GenericTypeVariable) typeParam;
+        var param = (JavaType.Parameterized) firstMethodParameter("genericRecursive");
+        JavaType typeParam = param.getTypeParameters().getFirst();
+        var generic = (JavaType.GenericTypeVariable) typeParam;
         assertThat(generic.getName()).isEqualTo("?");
         assertThat(generic.getVariance()).isEqualTo(COVARIANT);
-        assertThat(TypeUtils.asParameterized(generic.getBounds().get(0))).isNotNull();
+        assertThat(TypeUtils.asParameterized(generic.getBounds().getFirst())).isNotNull();
 
-        JavaType.GenericTypeVariable elemType = (JavaType.GenericTypeVariable) TypeUtils.asParameterized(generic.getBounds().get(0)).getTypeParameters().get(0);
+        var elemType = (JavaType.GenericTypeVariable) TypeUtils.asParameterized(generic.getBounds().getFirst()).getTypeParameters().getFirst();
         assertThat(elemType.getName()).isEqualTo("U");
         assertThat(elemType.getVariance()).isEqualTo(COVARIANT);
         assertThat(elemType.getBounds()).hasSize(1);
@@ -271,16 +271,16 @@ public class KotlinTypeMappingTest {
 
     @Test
     void inheritedJavaTypeGoat() {
-        JavaType.Parameterized clazz = (JavaType.Parameterized) firstMethodParameter("inheritedKotlinTypeGoat");
-        assertThat(clazz.getTypeParameters().get(0).toString()).isEqualTo("Generic{T}");
+        var clazz = (JavaType.Parameterized) firstMethodParameter("inheritedKotlinTypeGoat");
+        assertThat(clazz.getTypeParameters().getFirst().toString()).isEqualTo("Generic{T}");
         assertThat(clazz.getTypeParameters().get(1).toString()).isEqualTo("Generic{U extends org.openrewrite.kotlin.PT<Generic{U}> & org.openrewrite.kotlin.C}");
         assertThat(clazz.toString()).isEqualTo("org.openrewrite.kotlin.KotlinTypeGoat$InheritedKotlinTypeGoat<Generic{T}, Generic{U extends org.openrewrite.kotlin.PT<Generic{U}> & org.openrewrite.kotlin.C}>");
     }
 
     @Test
     void genericIntersectionType() {
-        JavaType.GenericTypeVariable clazz = (JavaType.GenericTypeVariable) firstMethodParameter("genericIntersection");
-        assertThat(clazz.getBounds().get(0).toString()).isEqualTo("org.openrewrite.kotlin.KotlinTypeGoat$TypeA");
+        var clazz = (JavaType.GenericTypeVariable) firstMethodParameter("genericIntersection");
+        assertThat(clazz.getBounds().getFirst().toString()).isEqualTo("org.openrewrite.kotlin.KotlinTypeGoat$TypeA");
         assertThat(clazz.getBounds().get(1).toString()).isEqualTo("org.openrewrite.kotlin.PT<Generic{U extends org.openrewrite.kotlin.KotlinTypeGoat$TypeA & org.openrewrite.kotlin.C}>");
         assertThat(clazz.getBounds().get(2).toString()).isEqualTo("org.openrewrite.kotlin.C");
         assertThat(clazz.toString()).isEqualTo("Generic{U extends org.openrewrite.kotlin.KotlinTypeGoat$TypeA & org.openrewrite.kotlin.PT<Generic{U}> & org.openrewrite.kotlin.C}");
@@ -288,7 +288,7 @@ public class KotlinTypeMappingTest {
 
     @Test
     void enumTypeA() {
-        JavaType.Class clazz = (JavaType.Class) firstMethodParameter("enumTypeA");
+        var clazz = (JavaType.Class) firstMethodParameter("enumTypeA");
         JavaType.Method type = clazz.getMethods().stream()
           .filter(m -> "<constructor>".equals(m.getName()))
           .findFirst()
@@ -302,7 +302,7 @@ public class KotlinTypeMappingTest {
 
     @Test
     void enumTypeB() {
-        JavaType.Class clazz = (JavaType.Class) firstMethodParameter("enumTypeB");
+        var clazz = (JavaType.Class) firstMethodParameter("enumTypeB");
         JavaType.Method type = clazz.getMethods().stream()
           .filter(m -> "<constructor>".equals(m.getName()))
           .findFirst()
@@ -318,11 +318,11 @@ public class KotlinTypeMappingTest {
     void ignoreSourceRetentionAnnotations() {
         JavaType.Parameterized goat = goatType;
         assertThat(goat.getAnnotations()).hasSize(1);
-        assertThat(goat.getAnnotations().get(0).getClassName()).isEqualTo("AnnotationWithRuntimeRetention");
+        assertThat(goat.getAnnotations().getFirst().getClassName()).isEqualTo("AnnotationWithRuntimeRetention");
 
         JavaType.Method clazzMethod = methodType("clazz");
         assertThat(clazzMethod.getAnnotations()).hasSize(1);
-        assertThat(clazzMethod.getAnnotations().get(0).getClassName()).isEqualTo("AnnotationWithRuntimeRetention");
+        assertThat(clazzMethod.getAnnotations().getFirst().getClassName()).isEqualTo("AnnotationWithRuntimeRetention");
     }
 
     @Test
@@ -340,27 +340,27 @@ public class KotlinTypeMappingTest {
     @Test
     void javaLangObject() {
         // These assertions are all based on the JavaTypeMapper.
-        JavaType.Class c = (JavaType.Class) firstMethodParameter("javaType");
+        var c = (JavaType.Class) firstMethodParameter("javaType");
         assertThat(c.getFullyQualifiedName()).isEqualTo("java.lang.Object");
         assertThat(c.getSupertype()).isNull();
-        assertThat(c.getMethods()).hasSize(12);
+        assertThat(c.getMethods()).hasSize(13);
 
         // Assert generic type parameters have the correct type bounds.
         JavaType.Method method = c.getMethods().stream().filter(it -> "getClass".equals(it.getName())).findFirst().orElse(null);
         assertThat(method).isNotNull();
         assertThat(method.toString()).isEqualTo("java.lang.Object{name=getClass,return=java.lang.Class<Generic{?}>,parameters=[]}");
 
-        JavaType.Parameterized returnType = (JavaType.Parameterized) method.getReturnType();
+        var returnType = (JavaType.Parameterized) method.getReturnType();
         // Assert the type of the parameterized type contains the type parameter from the source.
-        assertThat(returnType.getType().getTypeParameters().get(0).toString()).isEqualTo("Generic{T}");
+        assertThat(returnType.getType().getTypeParameters().getFirst().toString()).isEqualTo("Generic{T}");
     }
 
-    @SuppressWarnings({"KotlinConstantConditions", "RedundantExplicitType"})
     @Nested
+    @SuppressWarnings({"KotlinConstantConditions", "RedundantExplicitType"})
     class ParsingTest implements RewriteTest {
 
-        @Test
         @Issue("https://github.com/openrewrite/rewrite-kotlin/issues/303")
+        @Test
         void coneTypeProjection() {
             rewriteRun(
               kotlin(
@@ -368,21 +368,22 @@ public class KotlinTypeMappingTest {
                   val newList = buildList {
                       addAll(listOf(""))
                   }
-                  """, spec -> spec.afterRecipe(cu -> {
-                    MethodMatcher methodMatcher = new MethodMatcher("kotlin.collections.MutableList addAll(..)");
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<AtomicBoolean>() {
-                        @Override
-                        public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, AtomicBoolean found) {
-                            if (methodMatcher.matches(method)) {
-                                assertThat(method.getMethodType().toString()).isEqualTo("kotlin.collections.MutableList<Generic{E}>{name=addAll,return=kotlin.Boolean,parameters=[kotlin.collections.Collection<Generic{E}>]}");
-                                found.set(true);
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var methodMatcher = new MethodMatcher("kotlin.collections.MutableList addAll(..)");
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<AtomicBoolean>() {
+                            @Override
+                            public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, AtomicBoolean found) {
+                                if (methodMatcher.matches(method)) {
+                                    assertThat(method.getMethodType().toString()).isEqualTo("kotlin.collections.MutableList<kotlin.String>{name=addAll,return=kotlin.Boolean,parameters=[kotlin.collections.Collection<kotlin.String>]}");
+                                    found.set(true);
+                                }
+                                return super.visitMethodInvocation(method, found);
                             }
-                            return super.visitMethodInvocation(method, found);
-                        }
-                    }.visit(cu, found);
-                    assertThat(found.get()).isTrue();
-                })
+                        }.visit(cu, found);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
@@ -397,20 +398,21 @@ public class KotlinTypeMappingTest {
                   import java.lang.invoke.TypeDescriptor.OfField
 
                   abstract class Foo<T> : OfField<Foo<Any>>
-                  """, spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<AtomicBoolean>() {
-                        @Override
-                        public J.ClassDeclaration visitClassDeclaration(J.ClassDeclaration classDecl, AtomicBoolean found) {
-                            if ("Foo".equals(classDecl.getSimpleName())) {
-                                assertThat(classDecl.getImplements().get(0).getType().toString()).isEqualTo("java.lang.invoke.TypeDescriptor$OfField<Foo<kotlin.Any>>");
-                                found.set(true);
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<AtomicBoolean>() {
+                            @Override
+                            public J.ClassDeclaration visitClassDeclaration(J.ClassDeclaration classDecl, AtomicBoolean found) {
+                                if ("Foo".equals(classDecl.getSimpleName())) {
+                                    assertThat(classDecl.getImplements().getFirst().getType().toString()).isEqualTo("java.lang.invoke.TypeDescriptor$OfField<Foo<kotlin.Any>>");
+                                    found.set(true);
+                                }
+                                return super.visitClassDeclaration(classDecl, found);
                             }
-                            return super.visitClassDeclaration(classDecl, found);
-                        }
-                    }.visit(cu, found);
-                    assertThat(found.get()).isTrue();
-                })
+                        }.visit(cu, found);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
@@ -421,22 +423,23 @@ public class KotlinTypeMappingTest {
               kotlin(
                 """
                   val l = listOf ( "foo" to "1" , "bar" to 2 )
-                  """, spec -> spec.afterRecipe(cu -> {
-                    MethodMatcher methodMatcher = new MethodMatcher("kotlin.collections.CollectionsKt listOf(..)");
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<AtomicBoolean>() {
-                        @Override
-                        public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, AtomicBoolean found) {
-                            if (methodMatcher.matches(method)) {
-                                assertThat(method.getMethodType().toString())
-                                  .isEqualTo("kotlin.collections.CollectionsKt{name=listOf,return=kotlin.collections.List<kotlin.Pair<kotlin.String, Generic{kotlin.Comparable<Generic{?}> & java.io.Serializable}>>,parameters=[kotlin.Array<Generic{? extends Generic{T}}>]}");
-                                found.set(true);
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var methodMatcher = new MethodMatcher("kotlin.collections.CollectionsKt listOf(..)");
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<AtomicBoolean>() {
+                            @Override
+                            public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, AtomicBoolean found) {
+                                if (methodMatcher.matches(method)) {
+                                    assertThat(method.getMethodType().toString())
+                                            .isEqualTo("kotlin.collections.CollectionsKt{name=listOf,return=kotlin.collections.List<kotlin.Pair<kotlin.String, Generic{kotlin.Comparable<Generic{?}> & java.io.Serializable}>>,parameters=[kotlin.Array<Generic{? extends Generic{T}}>]}");
+                                    found.set(true);
+                                }
+                                return super.visitMethodInvocation(method, found);
                             }
-                            return super.visitMethodInvocation(method, found);
-                        }
-                    }.visit(cu, found);
-                    assertThat(found.get()).isTrue();
-                })
+                        }.visit(cu, found);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
@@ -448,21 +451,23 @@ public class KotlinTypeMappingTest {
                 """
                   val block: Collection<Any>.() -> Unit = {}
                   val r = listOf("descriptor").block()
-                  """, spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<AtomicBoolean>() {
-                        final MethodMatcher matcher = new MethodMatcher("kotlin.Function1 block(..)");
-                        @Override
-                        public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, AtomicBoolean atomicBoolean) {
-                            if (matcher.matches(method)) {
-                                assertThat(method.getMethodType().toString()).isEqualTo("kotlin.Function1<kotlin.collections.Collection<kotlin.Any>, kotlin.Unit>{name=block,return=kotlin.Unit,parameters=[kotlin.collections.Collection<kotlin.Any>]}");
-                                found.set(true);
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<AtomicBoolean>() {
+                            final MethodMatcher matcher = new MethodMatcher("kotlin.Function1 block(..)");
+
+                            @Override
+                            public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, AtomicBoolean atomicBoolean) {
+                                if (matcher.matches(method)) {
+                                    assertThat(method.getMethodType().toString()).isEqualTo("kotlin.Function1<kotlin.collections.Collection<kotlin.Any>, kotlin.Unit>{name=block,return=kotlin.Unit,parameters=[kotlin.collections.Collection<kotlin.Any>]}");
+                                    found.set(true);
+                                }
+                                return super.visitMethodInvocation(method, atomicBoolean);
                             }
-                            return super.visitMethodInvocation(method, atomicBoolean);
-                        }
-                    }.visit(cu, found);
-                    assertThat(found.get()).isTrue();
-                })
+                        }.visit(cu, found);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
@@ -474,23 +479,24 @@ public class KotlinTypeMappingTest {
                 """
                   val map = mapOf(Pair("one", 1)) as? Map<*, *>
                   val s = map.orEmpty().entries.joinToString { (key, value) -> "$key: $value" }
-                  """, spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<AtomicBoolean>() {
-                        @Override
-                        public J.FieldAccess visitFieldAccess(J.FieldAccess fieldAccess, AtomicBoolean found) {
-                            if ("entries".equals(fieldAccess.getSimpleName())) {
-                                assertThat(fieldAccess.getName().getType().toString())
-                                  .isEqualTo("kotlin.collections.Set<kotlin.collections.Map$Entry<Generic{?}, kotlin.Any>>");
-                                assertThat(fieldAccess.getName().getFieldType().toString())
-                                  .isEqualTo("kotlin.collections.Map{name=entries,type=kotlin.collections.Set<kotlin.collections.Map$Entry<Generic{?}, kotlin.Any>>}");
-                                found.set(true);
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<AtomicBoolean>() {
+                            @Override
+                            public J.FieldAccess visitFieldAccess(J.FieldAccess fieldAccess, AtomicBoolean found) {
+                                if ("entries".equals(fieldAccess.getSimpleName())) {
+                                    assertThat(fieldAccess.getName().getType().toString())
+                                            .isEqualTo("kotlin.collections.Set<kotlin.collections.Map$Entry<Generic{?}, kotlin.Any>>");
+                                    assertThat(fieldAccess.getName().getFieldType().toString())
+                                            .isEqualTo("kotlin.collections.Map{name=entries,type=kotlin.collections.Set<kotlin.collections.Map$Entry<Generic{?}, kotlin.Any>>}");
+                                    found.set(true);
+                                }
+                                return super.visitFieldAccess(fieldAccess, found);
                             }
-                            return super.visitFieldAccess(fieldAccess, found);
-                        }
-                    }.visit(cu, found);
-                    assertThat(found.get()).isTrue();
-                })
+                        }.visit(cu, found);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
@@ -519,20 +525,21 @@ public class KotlinTypeMappingTest {
                   fun method() {
                       println("foo")
                   }
-                  """, spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<AtomicBoolean>() {
-                        @Override
-                        public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, AtomicBoolean atomicBoolean) {
-                            if ("println".equals(method.getSimpleName())) {
-                                assertThat(method.getMethodType().toString()).isEqualTo("kotlin.io.ConsoleKt{name=println,return=kotlin.Unit,parameters=[kotlin.Any]}");
-                                found.set(true);
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<AtomicBoolean>() {
+                            @Override
+                            public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, AtomicBoolean atomicBoolean) {
+                                if ("println".equals(method.getSimpleName())) {
+                                    assertThat(method.getMethodType().toString()).isEqualTo("kotlin.io.ConsoleKt{name=println,return=kotlin.Unit,parameters=[kotlin.Any]}");
+                                    found.set(true);
+                                }
+                                return super.visitMethodInvocation(method, atomicBoolean);
                             }
-                            return super.visitMethodInvocation(method, atomicBoolean);
-                        }
-                    }.visit(cu, found);
-                    assertThat(found.get()).isTrue();
-                })
+                        }.visit(cu, found);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
@@ -552,31 +559,53 @@ public class KotlinTypeMappingTest {
                           else             ->    0.9
                       }
                   }
-                  """, spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<AtomicBoolean>() {
-                        @Override
-                        public K.When visitWhen(K.When when, AtomicBoolean found) {
-                            if (when.getType() instanceof JavaType.GenericTypeVariable) {
-                                assertThat(when.getType().toString()).isEqualTo("Generic{kotlin.Comparable<Generic{?}> & java.io.Serializable}");
-                                found.set(true);
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<AtomicBoolean>() {
+                            @Override
+                            public K.When visitWhen(K.When when, AtomicBoolean found) {
+                                if (when.getType() instanceof JavaType.GenericTypeVariable) {
+                                    assertThat(when.getType().toString()).isEqualTo("Generic{kotlin.Comparable<Generic{?}> & java.io.Serializable}");
+                                    found.set(true);
+                                }
+                                return super.visitWhen(when, found);
                             }
-                            return super.visitWhen(when, found);
-                        }
-                    }.visit(cu, found);
-                    assertThat(found.get()).isTrue();
-                })
+                        }.visit(cu, found);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
 
-        @ParameterizedTest
+        @Issue("https://github.com/openrewrite/rewrite/issues/6140")
+        @Test
+        void companionObject() {
+            rewriteRun(
+              kotlin(
+                """
+                  import kotlin.random.*
+                  
+                  val foo = Random.nextLong(0, 1)
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        J.VariableDeclarations.NamedVariable foo = ((J.VariableDeclarations) cu.getStatements().get(0)).getVariables().get(0);
+                        var random = (J.Identifier) ((J.MethodInvocation) foo.getInitializer()).getSelect();
+                        var randomType = (JavaType.Class) random.getType();
+                        assertThat(randomType.getFullyQualifiedName()).isEqualTo("kotlin.random.Random");
+                        assertThat(randomType.getSupertype().toString()).isEqualTo("kotlin.Any");
+                    })
+              )
+            );
+        }
+
         @CsvSource(value = {
           "n++~kotlin.Int",
           "--n~kotlin.Int",
           "n += a~kotlin.Int",
           "n = a + b~kotlin.Int"
         }, delimiter = '~')
+        @ParameterizedTest
         void operatorOverload(String p1, String p2) {
             rewriteRun(
               kotlin(
@@ -588,7 +617,7 @@ public class KotlinTypeMappingTest {
                       }
                   }
                   """.formatted(p1), spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
+                    var found = new AtomicBoolean(false);
                     new KotlinIsoVisitor<AtomicBoolean>() {
                         @Override
                         public J.AssignmentOperation visitAssignmentOperation(J.AssignmentOperation assignOp, AtomicBoolean atomicBoolean) {
@@ -608,7 +637,7 @@ public class KotlinTypeMappingTest {
 
                         @Override
                         public J.Binary visitBinary(J.Binary binary, AtomicBoolean b) {
-                            JavaType.Class mt = (JavaType.Class) binary.getType();
+                            var mt = (JavaType.Class) binary.getType();
                             if (p2.equals(mt.toString())) {
                                 found.set(true);
                             }
@@ -621,21 +650,23 @@ public class KotlinTypeMappingTest {
             );
         }
 
-        @ParameterizedTest
         @CsvSource(value = {
           // Method type on overload with no named arguments.
-          "foo(\"\", 1, true)~openRewriteFile0Kt{name=foo,return=kotlin.Unit,parameters=[kotlin.String,kotlin.Int,kotlin.Boolean]}",
+          "foo(\"\", 1, true)~org.example.openRewriteFile0Kt{name=foo,return=kotlin.Unit,parameters=[kotlin.String,kotlin.Int,kotlin.Boolean]}",
           // Method type on overload with named arguments.
-          "foo(b = 1)~openRewriteFile0Kt{name=foo,return=kotlin.Unit,parameters=[kotlin.Int,kotlin.Boolean]}",
+          "foo(b = 1)~org.example.openRewriteFile0Kt{name=foo,return=kotlin.Unit,parameters=[kotlin.Int,kotlin.Boolean]}",
           // Method type when named arguments are declared out of order.
-          "foo(trailingLambda = {}, noDefault = true, c = true, b = 1)~openRewriteFile0Kt{name=foo,return=kotlin.Unit,parameters=[kotlin.String,kotlin.Int,kotlin.Boolean,kotlin.Boolean,kotlin.Function0<kotlin.Unit>]}",
+          "foo(trailingLambda = {}, noDefault = true, c = true, b = 1)~org.example.openRewriteFile0Kt{name=foo,return=kotlin.Unit,parameters=[kotlin.String,kotlin.Int,kotlin.Boolean,kotlin.Boolean,kotlin.Function0<kotlin.Unit>]}",
           // Method type with trailing lambda
-          "foo(b = 1, noDefault = true) {}~openRewriteFile0Kt{name=foo,return=kotlin.Unit,parameters=[kotlin.String,kotlin.Int,kotlin.Boolean,kotlin.Boolean,kotlin.Function0<kotlin.Unit>]}"
+          "foo(b = 1, noDefault = true) {}~org.example.openRewriteFile0Kt{name=foo,return=kotlin.Unit,parameters=[kotlin.String,kotlin.Int,kotlin.Boolean,kotlin.Boolean,kotlin.Function0<kotlin.Unit>]}"
         }, delimiter = '~')
+        @ParameterizedTest
         void methodInvocationWithDefaults(String invocation, String methodType) {
             rewriteRun(
               kotlin(
                 """
+                  package org.example
+                  
                   fun <T> foo(b: T, c: Boolean = true) {
                       foo("", b, true, c) {}
                   }
@@ -648,8 +679,8 @@ public class KotlinTypeMappingTest {
                       %s
                   }
                   """.formatted(invocation), spec -> spec.afterRecipe(cu -> {
-                    MethodMatcher matcher = new MethodMatcher("* foo(..)");
-                    AtomicBoolean methodFound = new AtomicBoolean(false);
+                    var matcher = new MethodMatcher("*..* foo(..)");
+                    var methodFound = new AtomicBoolean(false);
                     new KotlinIsoVisitor<AtomicBoolean>() {
                         @Override
                         public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, AtomicBoolean found) {
@@ -662,7 +693,14 @@ public class KotlinTypeMappingTest {
                         @Override
                         public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, AtomicBoolean found) {
                             if (matcher.matches(method)) {
-                                assertThat(method.getMethodType().toString()).isEqualTo(methodType);
+                                assertThat(method.getMethodType()).satisfies(m -> {
+                                    assertThat(m.toString()).isEqualTo(methodType);
+                                    assertThat(m.getDeclaringType())
+                                      .satisfies(it -> {
+                                          assertThat(it.getFullyQualifiedName()).isEqualTo("org.example.openRewriteFile0Kt");
+                                          assertThat(it.getMethods()).extracting(JavaType.Method::getName).containsExactlyInAnyOrder("foo", "foo", "foo", "m");
+                                      });
+                                });
                                 found.set(true);
                             }
                             return super.visitMethodInvocation(method, found);
@@ -687,15 +725,16 @@ public class KotlinTypeMappingTest {
                       val b = 1 !in listOf(2)
                       val a = 1 !in Foo()
                   }
-                  """, spec -> spec.afterRecipe(cu -> new KotlinIsoVisitor<Integer>() {
-                      @Override
-                      public K.Binary visitBinary(K.Binary binary, Integer integer) {
-                          JavaType type = binary.getType();
-                          assertThat(type).isInstanceOf(JavaType.Class.class);
-                          assertThat(((JavaType.Class) type).getFullyQualifiedName()).isEqualTo("kotlin.Boolean");
-                          return binary;
-                      }
-                  }.visit(cu, 0))
+                  """,
+                    spec -> spec.afterRecipe(cu -> new KotlinIsoVisitor<Integer>() {
+                        @Override
+                        public K.Binary visitBinary(K.Binary binary, Integer integer) {
+                            JavaType type = binary.getType();
+                            assertThat(type).isInstanceOf(JavaType.Class.class);
+                            assertThat(((JavaType.Class) type).getFullyQualifiedName()).isEqualTo("kotlin.Boolean");
+                            return binary;
+                        }
+                    }.visit(cu, 0))
               )
             );
         }
@@ -714,18 +753,19 @@ public class KotlinTypeMappingTest {
                           return super.id
                       }
                   }
-                  """, spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<Integer>() {
-                        @Override
-                        public J.FieldAccess visitFieldAccess(J.FieldAccess fieldAccess, Integer integer) {
-                            assertThat(fieldAccess.getType().toString()).isEqualTo("kotlin.Int");
-                            found.set(true);
-                            return super.visitFieldAccess(fieldAccess, integer);
-                        }
-                    }.visit(cu, 0);
-                    assertThat(found.get()).isTrue();
-                })
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<Integer>() {
+                            @Override
+                            public J.FieldAccess visitFieldAccess(J.FieldAccess fieldAccess, Integer integer) {
+                                assertThat(fieldAccess.getType().toString()).isEqualTo("kotlin.Int");
+                                found.set(true);
+                                return super.visitFieldAccess(fieldAccess, integer);
+                            }
+                        }.visit(cu, 0);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
@@ -741,25 +781,26 @@ public class KotlinTypeMappingTest {
                   class Foo {
                       val l: ArrayList<String> = ArrayList<String>()
                   }
-                  """, spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<Integer>() {
-                        @Override
-                        public J.ParameterizedType visitParameterizedType(J.ParameterizedType type, Integer integer) {
-                            assertThat(type.getType().toString()).isEqualTo("java.util.ArrayList<kotlin.String>");
-                            assertThat(type.getClazz().getType().toString()).isEqualTo("java.util.ArrayList");
-                            found.set(true);
-                            return super.visitParameterizedType(type, integer);
-                        }
-                    }.visit(cu, 0);
-                    assertThat(found.get()).isTrue();
-                })
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<Integer>() {
+                            @Override
+                            public J.ParameterizedType visitParameterizedType(J.ParameterizedType type, Integer integer) {
+                                assertThat(type.getType().toString()).isEqualTo("java.util.ArrayList<kotlin.String>");
+                                assertThat(type.getClazz().getType().toString()).isEqualTo("java.util.ArrayList");
+                                found.set(true);
+                                return super.visitParameterizedType(type, integer);
+                            }
+                        }.visit(cu, 0);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
 
-        @SuppressWarnings("UnusedReceiverParameter")
         @Issue("https://github.com/openrewrite/rewrite-kotlin/issues/464")
+        @SuppressWarnings("UnusedReceiverParameter")
         @Test
         void parameterizedReceiver() {
             rewriteRun(
@@ -768,29 +809,30 @@ public class KotlinTypeMappingTest {
                   class SomeParameterized<T>
                   val SomeParameterized < Int > . receivedMember : Int
                       get ( ) = 42
-                  """, spec -> spec.afterRecipe(cu -> new KotlinIsoVisitor<Integer>() {
-                      @Override
-                      public J.ClassDeclaration visitClassDeclaration(J.ClassDeclaration classDecl, Integer integer) {
-                          assertThat(classDecl.getType().toString()).isEqualTo("SomeParameterized<Generic{T}>");
-                          assertThat(classDecl.getName().getType().toString()).isEqualTo("SomeParameterized<Generic{T}>");
-                          return super.visitClassDeclaration(classDecl, integer);
-                      }
+                  """,
+                    spec -> spec.afterRecipe(cu -> new KotlinIsoVisitor<Integer>() {
+                        @Override
+                        public J.ClassDeclaration visitClassDeclaration(J.ClassDeclaration classDecl, Integer integer) {
+                            assertThat(classDecl.getType().toString()).isEqualTo("SomeParameterized<Generic{T}>");
+                            assertThat(classDecl.getName().getType().toString()).isEqualTo("SomeParameterized<Generic{T}>");
+                            return super.visitClassDeclaration(classDecl, integer);
+                        }
 
-                      @Override
-                      public K.Property visitProperty(K.Property property, Integer integer) {
-                          assertThat(property.getReceiver().getType().toString()).isEqualTo("SomeParameterized<kotlin.Int>");
-                          assertThat(((J.ParameterizedType) property.getReceiver()).getClazz().getType().toString()).isEqualTo("SomeParameterized");
-                          return super.visitProperty(property, integer);
-                      }
+                        @Override
+                        public K.Property visitProperty(K.Property property, Integer integer) {
+                            assertThat(property.getReceiver().getType().toString()).isEqualTo("SomeParameterized<kotlin.Int>");
+                            assertThat(((J.ParameterizedType) property.getReceiver()).getClazz().getType().toString()).isEqualTo("SomeParameterized");
+                            return super.visitProperty(property, integer);
+                        }
 
-                      @Override
-                      public J.VariableDeclarations.NamedVariable visitVariable(J.VariableDeclarations.NamedVariable variable, Integer integer) {
-                          assertThat(variable.getVariableType().toString()).isEqualTo("openRewriteFile0Kt{name=receivedMember,type=kotlin.Int}");
-                          assertThat(variable.getName().getType().toString()).isEqualTo("kotlin.Int");
-                          assertThat(variable.getName().getFieldType().toString()).isEqualTo("openRewriteFile0Kt{name=receivedMember,type=kotlin.Int}");
-                          return super.visitVariable(variable, integer);
-                      }
-                  }.visit(cu, 0))
+                        @Override
+                        public J.VariableDeclarations.NamedVariable visitVariable(J.VariableDeclarations.NamedVariable variable, Integer integer) {
+                            assertThat(variable.getVariableType().toString()).isEqualTo("openRewriteFile0Kt{name=receivedMember,type=kotlin.Int}");
+                            assertThat(variable.getName().getType().toString()).isEqualTo("kotlin.Int");
+                            assertThat(variable.getName().getFieldType().toString()).isEqualTo("openRewriteFile0Kt{name=receivedMember,type=kotlin.Int}");
+                            return super.visitVariable(variable, integer);
+                        }
+                    }.visit(cu, 0))
               )
             );
         }
@@ -804,56 +846,57 @@ public class KotlinTypeMappingTest {
                   fun foo() {
                       val ( a , b , c ) = Triple ( 1 , 2 , 3 )
                   }
-                  """, spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<AtomicBoolean>() {
-                        @Override
-                        public K.DestructuringDeclaration visitDestructuringDeclaration(K.DestructuringDeclaration destructuringDeclaration, AtomicBoolean found) {
-                            found.set(true);
-                            return super.visitDestructuringDeclaration(destructuringDeclaration, found);
-                        }
-
-                        @Override
-                        public J.NewClass visitNewClass(J.NewClass newClass, AtomicBoolean found) {
-                            if ("Triple".equals(((J.Identifier) newClass.getClazz()).getSimpleName())) {
-                                assertThat(newClass.getClazz().getType().toString()).isEqualTo("kotlin.Triple");
-                                assertThat(newClass.getConstructorType().toString()).isEqualTo("kotlin.Triple<kotlin.Int, kotlin.Int, kotlin.Int>{name=<constructor>,return=kotlin.Triple<kotlin.Int, kotlin.Int, kotlin.Int>,parameters=[kotlin.Int,kotlin.Int,kotlin.Int]}");
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<AtomicBoolean>() {
+                            @Override
+                            public K.DestructuringDeclaration visitDestructuringDeclaration(K.DestructuringDeclaration destructuringDeclaration, AtomicBoolean found) {
+                                found.set(true);
+                                return super.visitDestructuringDeclaration(destructuringDeclaration, found);
                             }
-                            return super.visitNewClass(newClass, found);
-                        }
 
-                        @Override
-                        public J.VariableDeclarations.NamedVariable visitVariable(J.VariableDeclarations.NamedVariable variable, AtomicBoolean found) {
-                            switch (variable.getSimpleName()) {
-                                case "<destruct>" -> assertThat(variable.getName().getType().toString())
-                                  .isEqualTo("kotlin.Triple<kotlin.Int, kotlin.Int, kotlin.Int>");
-                                case "a" -> {
-                                    assertThat(variable.getVariableType().toString())
-                                      .isEqualTo("openRewriteFile0Kt{name=foo,return=kotlin.Unit,parameters=[]}{name=a,type=kotlin.Int}");
-                                    assertThat(variable.getInitializer()).isNull();
+                            @Override
+                            public J.NewClass visitNewClass(J.NewClass newClass, AtomicBoolean found) {
+                                if ("Triple".equals(((J.Identifier) newClass.getClazz()).getSimpleName())) {
+                                    assertThat(newClass.getClazz().getType().toString()).isEqualTo("kotlin.Triple");
+                                    assertThat(newClass.getConstructorType().toString()).isEqualTo("kotlin.Triple<kotlin.Int, kotlin.Int, kotlin.Int>{name=<constructor>,return=kotlin.Triple<kotlin.Int, kotlin.Int, kotlin.Int>,parameters=[kotlin.Int,kotlin.Int,kotlin.Int]}");
                                 }
-                                case "b" -> {
-                                    assertThat(variable.getVariableType().toString())
-                                      .isEqualTo("openRewriteFile0Kt{name=foo,return=kotlin.Unit,parameters=[]}{name=b,type=kotlin.Int}");
-                                    assertThat(variable.getInitializer()).isNull();
-                                }
-                                case "c" -> {
-                                    assertThat(variable.getVariableType().toString())
-                                      .isEqualTo("openRewriteFile0Kt{name=foo,return=kotlin.Unit,parameters=[]}{name=c,type=kotlin.Int}");
-                                    assertThat(variable.getInitializer()).isNull();
-                                }
+                                return super.visitNewClass(newClass, found);
                             }
-                            return super.visitVariable(variable, found);
-                        }
-                    }.visit(cu, found);
-                    assertThat(found.get()).isTrue();
-                })
+
+                            @Override
+                            public J.VariableDeclarations.NamedVariable visitVariable(J.VariableDeclarations.NamedVariable variable, AtomicBoolean found) {
+                                switch (variable.getSimpleName()) {
+                                    case "<destruct>" -> assertThat(variable.getName().getType().toString())
+                                            .isEqualTo("kotlin.Triple<kotlin.Int, kotlin.Int, kotlin.Int>");
+                                    case "a" -> {
+                                        assertThat(variable.getVariableType().toString())
+                                                .isEqualTo("openRewriteFile0Kt{name=foo,return=kotlin.Unit,parameters=[]}{name=a,type=kotlin.Int}");
+                                        assertThat(variable.getInitializer()).isNull();
+                                    }
+                                    case "b" -> {
+                                        assertThat(variable.getVariableType().toString())
+                                                .isEqualTo("openRewriteFile0Kt{name=foo,return=kotlin.Unit,parameters=[]}{name=b,type=kotlin.Int}");
+                                        assertThat(variable.getInitializer()).isNull();
+                                    }
+                                    case "c" -> {
+                                        assertThat(variable.getVariableType().toString())
+                                                .isEqualTo("openRewriteFile0Kt{name=foo,return=kotlin.Unit,parameters=[]}{name=c,type=kotlin.Int}");
+                                        assertThat(variable.getInitializer()).isNull();
+                                    }
+                                }
+                                return super.visitVariable(variable, found);
+                            }
+                        }.visit(cu, found);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
 
-        @SuppressWarnings("CanBePrimaryConstructorProperty")
         @Issue("https://github.com/openrewrite/rewrite-kotlin/issues/374")
+        @SuppressWarnings("CanBePrimaryConstructorProperty")
         @Test
         void privateToThisModifier() {
             rewriteRun(
@@ -903,30 +946,31 @@ public class KotlinTypeMappingTest {
                           val use: Int = foo4
                       }
                   }
-                  """, spec -> spec.afterRecipe(cu -> new KotlinIsoVisitor<Integer>() {
-                      @Override
-                      public J.VariableDeclarations.NamedVariable visitVariable(J.VariableDeclarations.NamedVariable variable, Integer integer) {
-                          switch (variable.getSimpleName()) {
-                              case "foo1": {
-                                  assertThat(variable.getVariableType().toString()).isEqualTo("openRewriteFile0Kt{name=foo1,type=kotlin.Int}");
-                                  break;
-                              }
-                              case "foo2": {
-                                  assertThat(variable.getVariableType().toString()).isEqualTo("Foo{name=foo2,type=kotlin.Int}");
-                                  break;
-                              }
-                              case "foo3": {
-                                  assertThat(variable.getVariableType().toString()).isEqualTo("Foo{name=foo3,type=kotlin.Int}");
-                                  break;
-                              }
-                              case "foo4": {
-                                  assertThat(variable.getVariableType().toString()).isEqualTo("Foo{name=m,return=kotlin.Unit,parameters=[kotlin.Int]}{name=foo4,type=kotlin.Int}");
-                                  break;
-                              }
-                          }
-                          return super.visitVariable(variable, integer);
-                      }
-                  }.visit(cu, 0))
+                  """,
+                    spec -> spec.afterRecipe(cu -> new KotlinIsoVisitor<Integer>() {
+                        @Override
+                        public J.VariableDeclarations.NamedVariable visitVariable(J.VariableDeclarations.NamedVariable variable, Integer integer) {
+                            switch (variable.getSimpleName()) {
+                                case "foo1": {
+                                    assertThat(variable.getVariableType().toString()).isEqualTo("openRewriteFile0Kt{name=foo1,type=kotlin.Int}");
+                                    break;
+                                }
+                                case "foo2": {
+                                    assertThat(variable.getVariableType().toString()).isEqualTo("Foo{name=foo2,type=kotlin.Int}");
+                                    break;
+                                }
+                                case "foo3": {
+                                    assertThat(variable.getVariableType().toString()).isEqualTo("Foo{name=foo3,type=kotlin.Int}");
+                                    break;
+                                }
+                                case "foo4": {
+                                    assertThat(variable.getVariableType().toString()).isEqualTo("Foo{name=m,return=kotlin.Unit,parameters=[kotlin.Int]}{name=foo4,type=kotlin.Int}");
+                                    break;
+                                }
+                            }
+                            return super.visitVariable(variable, integer);
+                        }
+                    }.visit(cu, 0))
               )
             );
         }
@@ -978,37 +1022,38 @@ public class KotlinTypeMappingTest {
                   interface D
 
                   class KotlinTypeGoat<T, S>  where   S : A, T : D, S : B, T : C
-                  """, spec -> spec.afterRecipe(cu -> {
-                      AtomicBoolean found = new AtomicBoolean(false);
-                      new KotlinIsoVisitor<AtomicBoolean>() {
-                          @Override
-                          public K.ClassDeclaration visitClassDeclaration(K.ClassDeclaration classDeclaration, AtomicBoolean atomicBoolean) {
-                              if ("KotlinTypeGoat".equals(classDeclaration.getClassDeclaration().getSimpleName())) {
-                                  List<J.TypeParameter> constraints = classDeclaration.getTypeConstraints().getConstraints();
-                                  for (int i = 0; i < constraints.size(); i++) {
-                                      J.TypeParameter p = constraints.get(i);
-                                      switch (i) {
-                                          case 0:
-                                              assertThat(p.getName().getType().toString()).isEqualTo("A");
-                                              break;
-                                          case 1:
-                                              assertThat(p.getName().getType().toString()).isEqualTo("D");
-                                              break;
-                                          case 2:
-                                              assertThat(p.getName().getType().toString()).isEqualTo("B");
-                                              break;
-                                          case 3:
-                                              assertThat(p.getName().getType().toString()).isEqualTo("C");
-                                              found.set(true);
-                                              break;
-                                      }
-                                  }
-                              }
-                              return super.visitClassDeclaration(classDeclaration, atomicBoolean);
-                          }
-                    }.visit(cu, found);
-                    assertThat(found.get()).isTrue();
-                })
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<AtomicBoolean>() {
+                            @Override
+                            public K.ClassDeclaration visitClassDeclaration(K.ClassDeclaration classDeclaration, AtomicBoolean atomicBoolean) {
+                                if ("KotlinTypeGoat".equals(classDeclaration.getClassDeclaration().getSimpleName())) {
+                                    List<J.TypeParameter> constraints = classDeclaration.getTypeConstraints().getConstraints();
+                                    for (int i = 0; i < constraints.size(); i++) {
+                                        J.TypeParameter p = constraints.get(i);
+                                        switch (i) {
+                                            case 0:
+                                                assertThat(p.getName().getType().toString()).isEqualTo("A");
+                                                break;
+                                            case 1:
+                                                assertThat(p.getName().getType().toString()).isEqualTo("D");
+                                                break;
+                                            case 2:
+                                                assertThat(p.getName().getType().toString()).isEqualTo("B");
+                                                break;
+                                            case 3:
+                                                assertThat(p.getName().getType().toString()).isEqualTo("C");
+                                                found.set(true);
+                                                break;
+                                        }
+                                    }
+                                }
+                                return super.visitClassDeclaration(classDeclaration, atomicBoolean);
+                            }
+                        }.visit(cu, found);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
@@ -1053,7 +1098,7 @@ public class KotlinTypeMappingTest {
             rewriteRun(
               kotlin("%s".formatted(value),
                 spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
+                    var found = new AtomicBoolean(false);
                     new KotlinIsoVisitor<Integer>() {
                         @Override
                         public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
@@ -1081,7 +1126,7 @@ public class KotlinTypeMappingTest {
               kotlin(
                 "val n = java.lang.Integer.`MAX_VALUE`",
                 spec -> spec.afterRecipe(cu -> {
-                      AtomicBoolean found = new AtomicBoolean(false);
+                      var found = new AtomicBoolean(false);
                     new KotlinIsoVisitor<Integer>() {
                         @Override
                         public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
@@ -1106,7 +1151,7 @@ public class KotlinTypeMappingTest {
               kotlin(
                 "val unused: (Int, Int) -> Int = { _, y -> y }",
                 spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
+                    var found = new AtomicBoolean(false);
                     new KotlinIsoVisitor<Integer>() {
                         @Override
                         public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
@@ -1139,11 +1184,11 @@ public class KotlinTypeMappingTest {
                   }
                   """,
                 spec -> spec.afterRecipe(cu -> {
-                    MethodMatcher getMatcher = new MethodMatcher("Test get(..)");
-                    AtomicBoolean foundGet = new AtomicBoolean(false);
+                    var getMatcher = new MethodMatcher("Test get(..)");
+                    var foundGet = new AtomicBoolean(false);
 
-                    MethodMatcher setMatcher = new MethodMatcher("Test set(..)");
-                    AtomicBoolean foundSet = new AtomicBoolean(false);
+                    var setMatcher = new MethodMatcher("Test set(..)");
+                    var foundSet = new AtomicBoolean(false);
                     new KotlinIsoVisitor<Integer>() {
                         @Override
                         public J.MethodDeclaration visitMethodDeclaration(J.MethodDeclaration method, Integer integer) {
@@ -1162,8 +1207,8 @@ public class KotlinTypeMappingTest {
             );
         }
 
-        @SuppressWarnings("HasPlatformType")
         @Issue("https://github.com/openrewrite/rewrite-kotlin/issues/483")
+        @SuppressWarnings("HasPlatformType")
         @Test
         void isStaticFlag() {
             //noinspection RemoveRedundantBackticks,RemoveRedundantQualifierName
@@ -1171,8 +1216,8 @@ public class KotlinTypeMappingTest {
               kotlin(
                 "val i = Integer.valueOf(1)",
                 spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    MethodMatcher matcher = new MethodMatcher("java.lang.Integer valueOf(..)");
+                    var found = new AtomicBoolean(false);
+                    var matcher = new MethodMatcher("java.lang.Integer valueOf(..)");
                     new KotlinIsoVisitor<Integer>() {
                         @Override
                         public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, Integer integer) {
@@ -1200,7 +1245,7 @@ public class KotlinTypeMappingTest {
                   import `java`.`util`.`List`
                   """,
                 spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
+                    var found = new AtomicBoolean(false);
                     new KotlinIsoVisitor<Integer>() {
                         @Override
                         public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
@@ -1221,8 +1266,8 @@ public class KotlinTypeMappingTest {
             );
         }
 
-        @SuppressWarnings("SuspiciousCallableReferenceInLambda")
         @Issue("https://github.com/openrewrite/rewrite-kotlin/issues/485")
+        @SuppressWarnings("SuspiciousCallableReferenceInLambda")
         @Test
         void memberReference() {
             //noinspection RemoveRedundantBackticks
@@ -1236,7 +1281,7 @@ public class KotlinTypeMappingTest {
                   }
                   """,
                 spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
+                    var found = new AtomicBoolean(false);
                     new KotlinIsoVisitor<Integer>() {
                         @Override
                         public J.MemberReference visitMemberReference(J.MemberReference memberRef, Integer integer) {
@@ -1251,19 +1296,19 @@ public class KotlinTypeMappingTest {
             );
         }
 
-        @Issue("https://github.com/openrewrite/rewrite-kotlin/issues/485")
-        @ParameterizedTest
         @CsvSource(value = {
           "fun foo(l: MutableList<String>) { @Suppress l += \"x\" }~kotlin.Suppress",
           "val releaseDates: List< @Suppress String > = emptyList()~kotlin.Suppress"
         }, delimiter = '~')
+        @Issue("https://github.com/openrewrite/rewrite-kotlin/issues/485")
+        @ParameterizedTest
         void annotationOnKotlinConeType(String input, String type) {
             //noinspection RemoveRedundantBackticks
             rewriteRun(
               kotlin(
-                String.format("%s", input),
+                      "%s".formatted(input),
                 spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
+                    var found = new AtomicBoolean(false);
                     new KotlinIsoVisitor<Integer>() {
                         @Override
                         public J.Annotation visitAnnotation(J.Annotation annotation, Integer integer) {
@@ -1286,7 +1331,7 @@ public class KotlinTypeMappingTest {
               kotlin(
                 "val arr = listOf(1, 2, 3)",
                 spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
+                    var found = new AtomicBoolean(false);
                     new KotlinIsoVisitor<Integer>() {
                         @Override
                         public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, Integer integer) {
@@ -1310,26 +1355,27 @@ public class KotlinTypeMappingTest {
                  class Test {
                      val sb = java.lang.StringBuilder().toString()
                  }
-                 """, spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean isFieldTargetNull = new AtomicBoolean(false);
-                    AtomicBoolean isStringBuilderTyped = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<Integer>() {
-                        @Override
-                        public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
-                            if ("lang".equals(identifier.getSimpleName())) {
-                                assertThat(identifier.getType()).isNull();
-                                isFieldTargetNull.set(true);
+                 """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var isFieldTargetNull = new AtomicBoolean(false);
+                        var isStringBuilderTyped = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<Integer>() {
+                            @Override
+                            public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
+                                if ("lang".equals(identifier.getSimpleName())) {
+                                    assertThat(identifier.getType()).isNull();
+                                    isFieldTargetNull.set(true);
+                                }
+                                if ("StringBuilder".equals(identifier.getSimpleName())) {
+                                    assertThat(identifier.getType().toString()).isEqualTo("java.lang.StringBuilder");
+                                    isStringBuilderTyped.set(true);
+                                }
+                                return super.visitIdentifier(identifier, integer);
                             }
-                            if ("StringBuilder".equals(identifier.getSimpleName())) {
-                                assertThat(identifier.getType().toString()).isEqualTo("java.lang.StringBuilder");
-                                isStringBuilderTyped.set(true);
-                            }
-                            return super.visitIdentifier(identifier, integer);
-                        }
-                    }.visit(cu, 0);
-                    assertThat(isFieldTargetNull.get()).isTrue();
-                    assertThat(isStringBuilderTyped.get()).isTrue();
-                })
+                        }.visit(cu, 0);
+                        assertThat(isFieldTargetNull.get()).isTrue();
+                        assertThat(isStringBuilderTyped.get()).isTrue();
+                    })
               )
             );
         }
@@ -1342,30 +1388,31 @@ public class KotlinTypeMappingTest {
                 """
                   @Suppress("UNUSED_PARAMETER")
                   fun foo(l: List<Pair<String, String>>) {}
-                  """, spec -> spec.afterRecipe(cu -> {
-                    AtomicInteger count = new AtomicInteger(0);
-                    new KotlinIsoVisitor<Integer>() {
-                        @Override
-                        public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
-                            switch (identifier.getSimpleName()) {
-                                case "List" -> {
-                                    assertThat(identifier.getType().toString()).isEqualTo("kotlin.collections.List");
-                                    count.incrementAndGet();
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var count = new AtomicInteger(0);
+                        new KotlinIsoVisitor<Integer>() {
+                            @Override
+                            public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
+                                switch (identifier.getSimpleName()) {
+                                    case "List" -> {
+                                        assertThat(identifier.getType().toString()).isEqualTo("kotlin.collections.List");
+                                        count.incrementAndGet();
+                                    }
+                                    case "Pair" -> {
+                                        assertThat(identifier.getType().toString()).isEqualTo("kotlin.Pair");
+                                        count.incrementAndGet();
+                                    }
+                                    case "String" -> {
+                                        assertThat(identifier.getType().toString()).isEqualTo("kotlin.String");
+                                        count.incrementAndGet();
+                                    }
                                 }
-                                case "Pair" -> {
-                                    assertThat(identifier.getType().toString()).isEqualTo("kotlin.Pair");
-                                    count.incrementAndGet();
-                                }
-                                case "String" -> {
-                                    assertThat(identifier.getType().toString()).isEqualTo("kotlin.String");
-                                    count.incrementAndGet();
-                                }
+                                return super.visitIdentifier(identifier, integer);
                             }
-                            return super.visitIdentifier(identifier, integer);
-                        }
-                    }.visit(cu, 0);
-                    assertThat(count.get()).isEqualTo(4);
-                })
+                        }.visit(cu, 0);
+                        assertThat(count.get()).isEqualTo(4);
+                    })
               )
             );
         }
@@ -1377,30 +1424,31 @@ public class KotlinTypeMappingTest {
               kotlin(
                 """
                   val m: MutableMap.MutableEntry<String, String>? = null
-                  """, spec -> spec.afterRecipe(cu -> {
-                    AtomicInteger count = new AtomicInteger(0);
-                    new KotlinIsoVisitor<Integer>() {
-                        @Override
-                        public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
-                            switch (identifier.getSimpleName()) {
-                                case "MutableMap" -> {
-                                    assertThat(identifier.getType().toString()).isEqualTo("kotlin.collections.MutableMap<Generic{K}, Generic{V}>");
-                                    count.incrementAndGet();
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var count = new AtomicInteger(0);
+                        new KotlinIsoVisitor<Integer>() {
+                            @Override
+                            public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
+                                switch (identifier.getSimpleName()) {
+                                    case "MutableMap" -> {
+                                        assertThat(identifier.getType().toString()).isEqualTo("kotlin.collections.MutableMap<Generic{K}, Generic{V}>");
+                                        count.incrementAndGet();
+                                    }
+                                    case "MutableEntry" -> {
+                                        assertThat(identifier.getType().toString()).isEqualTo("kotlin.collections.MutableMap$MutableEntry<kotlin.String, kotlin.String>");
+                                        count.incrementAndGet();
+                                    }
+                                    case "String" -> {
+                                        assertThat(identifier.getType().toString()).isEqualTo("kotlin.String");
+                                        count.incrementAndGet();
+                                    }
                                 }
-                                case "MutableEntry" -> {
-                                    assertThat(identifier.getType().toString()).isEqualTo("kotlin.collections.MutableMap$MutableEntry<kotlin.String, kotlin.String>");
-                                    count.incrementAndGet();
-                                }
-                                case "String" -> {
-                                    assertThat(identifier.getType().toString()).isEqualTo("kotlin.String");
-                                    count.incrementAndGet();
-                                }
+                                return super.visitIdentifier(identifier, integer);
                             }
-                            return super.visitIdentifier(identifier, integer);
-                        }
-                    }.visit(cu, 0);
-                    assertThat(count.get()).isEqualTo(4);
-                })
+                        }.visit(cu, 0);
+                        assertThat(count.get()).isEqualTo(4);
+                    })
               )
             );
         }
@@ -1414,23 +1462,24 @@ public class KotlinTypeMappingTest {
                   @file:Suppress("UNUSED_PARAMETER")
                   fun foo(a: Array<in String>) {}
                   fun bar(b: Array<out Number>) {}
-                  """, spec -> spec.afterRecipe(cu -> {
-                    AtomicInteger count = new AtomicInteger(0);
-                    new KotlinIsoVisitor<Integer>() {
-                        @Override
-                        public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
-                            if ("String".equals(identifier.getSimpleName())) {
-                                assertThat(identifier.getType().toString()).isEqualTo("kotlin.String");
-                                count.incrementAndGet();
-                            } else if ("Number".equals(identifier.getSimpleName())) {
-                                assertThat(identifier.getType().toString()).isEqualTo("kotlin.Number");
-                                count.incrementAndGet();
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var count = new AtomicInteger(0);
+                        new KotlinIsoVisitor<Integer>() {
+                            @Override
+                            public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
+                                if ("String".equals(identifier.getSimpleName())) {
+                                    assertThat(identifier.getType().toString()).isEqualTo("kotlin.String");
+                                    count.incrementAndGet();
+                                } else if ("Number".equals(identifier.getSimpleName())) {
+                                    assertThat(identifier.getType().toString()).isEqualTo("kotlin.Number");
+                                    count.incrementAndGet();
+                                }
+                                return super.visitIdentifier(identifier, integer);
                             }
-                            return super.visitIdentifier(identifier, integer);
-                        }
-                    }.visit(cu, 0);
-                    assertThat(count.get()).isEqualTo(2);
-                })
+                        }.visit(cu, 0);
+                        assertThat(count.get()).isEqualTo(2);
+                    })
               )
             );
         }
@@ -1442,21 +1491,22 @@ public class KotlinTypeMappingTest {
                 """
                  import java.lang.AutoCloseable
                  abstract class Test : AutoCloseable
-                 """, spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<Integer>() {
-                        @Override
-                        public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
-                            if ("AutoCloseable".equals(identifier.getSimpleName()) && identifier.getType() != null) {
-                                assertThat(((JavaType.Class) identifier.getType()).getMethods().get(0).toString())
-                                  .isEqualTo("java.lang.AutoCloseable{name=close,return=void,parameters=[]}");
-                                found.set(true);
+                 """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<Integer>() {
+                            @Override
+                            public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
+                                if ("AutoCloseable".equals(identifier.getSimpleName()) && identifier.getType() != null) {
+                                    assertThat(((JavaType.Class) identifier.getType()).getMethods().getFirst().toString())
+                                            .isEqualTo("java.lang.AutoCloseable{name=close,return=void,parameters=[]}");
+                                    found.set(true);
+                                }
+                                return super.visitIdentifier(identifier, integer);
                             }
-                            return super.visitIdentifier(identifier, integer);
-                        }
-                    }.visit(cu, 0);
-                    assertThat(found.get()).isTrue();
-                })
+                        }.visit(cu, 0);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
@@ -1475,21 +1525,22 @@ public class KotlinTypeMappingTest {
                           // Body is required to reproduce issue
                       }
                   }
-                  """, spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<Integer>() {
-                        @Override
-                        public J.EnumValue visitEnumValue(J.EnumValue _enum, Integer integer) {
-                            if ("FOO".equals(_enum.getName().getSimpleName())) {
-                                assertThat(_enum.getInitializer().getConstructorType().toString())
-                                  .isEqualTo("Test{name=<constructor>,return=Test,parameters=[Code]}");
-                                found.set(true);
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<Integer>() {
+                            @Override
+                            public J.EnumValue visitEnumValue(J.EnumValue _enum, Integer integer) {
+                                if ("FOO".equals(_enum.getName().getSimpleName())) {
+                                    assertThat(_enum.getInitializer().getConstructorType().toString())
+                                            .isEqualTo("Test{name=<constructor>,return=Test,parameters=[Code]}");
+                                    found.set(true);
+                                }
+                                return super.visitEnumValue(_enum, integer);
                             }
-                            return super.visitEnumValue(_enum, integer);
-                        }
-                    }.visit(cu, 0);
-                    assertThat(found.get()).isTrue();
-                })
+                        }.visit(cu, 0);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
@@ -1500,20 +1551,21 @@ public class KotlinTypeMappingTest {
               kotlin(
                 """
                  fun foo() :   suspend    ( param : Int )  -> Unit = { }
-                 """, spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<Integer>() {
-                        @Override
-                        public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
-                            if ("param".equals(identifier.getSimpleName()) && identifier.getType() != null) {
-                                assertThat(identifier.getType().toString()).isEqualTo("kotlin.Int");
-                                found.set(true);
+                 """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<Integer>() {
+                            @Override
+                            public J.Identifier visitIdentifier(J.Identifier identifier, Integer integer) {
+                                if ("param".equals(identifier.getSimpleName()) && identifier.getType() != null) {
+                                    assertThat(identifier.getType().toString()).isEqualTo("kotlin.Int");
+                                    found.set(true);
+                                }
+                                return super.visitIdentifier(identifier, integer);
                             }
-                            return super.visitIdentifier(identifier, integer);
-                        }
-                    }.visit(cu, 0);
-                    assertThat(found.get()).isTrue();
-                })
+                        }.visit(cu, 0);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
@@ -1525,18 +1577,19 @@ public class KotlinTypeMappingTest {
               kotlin(
                 """
                  val arr = arrayOf(1, 2, 3)
-                 """, spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<Integer>() {
-                        @Override
-                        public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, Integer integer) {
-                            assertThat(method.getMethodType().toString()).isEqualTo("kotlin.Library{name=arrayOf,return=kotlin.Array<kotlin.Int>,parameters=[kotlin.Array<Generic{? extends Generic{T}}>]}");
-                            found.set(true);
-                            return super.visitMethodInvocation(method, integer);
-                        }
-                    }.visit(cu, 0);
-                    assertThat(found.get()).isTrue();
-                })
+                 """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<Integer>() {
+                            @Override
+                            public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, Integer integer) {
+                                assertThat(method.getMethodType().toString()).isEqualTo("kotlin.Library{name=arrayOf,return=kotlin.Array<kotlin.Int>,parameters=[kotlin.Array<Generic{? extends Generic{T}}>]}");
+                                found.set(true);
+                                return super.visitMethodInvocation(method, integer);
+                            }
+                        }.visit(cu, 0);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
@@ -1550,20 +1603,21 @@ public class KotlinTypeMappingTest {
                      @Suppress("UNCHECKED_CAST")
                      requireNotNull("x")
                  }
-                 """, spec -> spec.afterRecipe(cu -> {
-                    AtomicInteger count = new AtomicInteger(0);
-                    new KotlinIsoVisitor<Integer>() {
-                        @Override
-                        public J.NewClass visitNewClass(J.NewClass newClass, Integer integer) {
-                            assertThat(newClass.getMethodType().toString()).isEqualTo("java.util.function.Supplier{name=<constructor>,return=java.util.function.Supplier<kotlin.String>,parameters=[kotlin.Function0<Generic{T extends kotlin.Any}>]}");
-                            count.getAndIncrement();
-                            assertThat(newClass.getClazz().getType().toString()).isEqualTo("java.util.function.Supplier<kotlin.String>");
-                            count.getAndIncrement();
-                            return super.visitNewClass(newClass, integer);
-                        }
-                    }.visit(cu, 0);
-                    assertThat(count.get()).isEqualTo(2);
-                })
+                 """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var count = new AtomicInteger(0);
+                        new KotlinIsoVisitor<Integer>() {
+                            @Override
+                            public J.NewClass visitNewClass(J.NewClass newClass, Integer integer) {
+                                assertThat(newClass.getMethodType().toString()).isEqualTo("java.util.function.Supplier{name=<constructor>,return=java.util.function.Supplier<kotlin.String>,parameters=[kotlin.Function0<Generic{T extends kotlin.Any}>]}");
+                                count.getAndIncrement();
+                                assertThat(newClass.getClazz().getType().toString()).isEqualTo("java.util.function.Supplier<kotlin.String>");
+                                count.getAndIncrement();
+                                return super.visitNewClass(newClass, integer);
+                            }
+                        }.visit(cu, 0);
+                        assertThat(count.get()).isEqualTo(2);
+                    })
               )
             );
         }
@@ -1580,20 +1634,21 @@ public class KotlinTypeMappingTest {
                     @Suppress("UNUSED_PARAMETER")
                     fun mRef(a: Any) {}
                   }
-                  """, spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
-                    new KotlinIsoVisitor<Integer>() {
-                        @Override
-                        public J.MemberReference visitMemberReference(J.MemberReference memberRef, Integer integer) {
-                            if ("A".equals(memberRef.getReference().getSimpleName())) {
-                                assertThat(memberRef.getMethodType().toString()).isEqualTo("A{name=<constructor>,return=A,parameters=[kotlin.Function1<kotlin.Function1<kotlin.Any, A>, A>]}");
-                                found.set(true);
+                  """,
+                    spec -> spec.afterRecipe(cu -> {
+                        var found = new AtomicBoolean(false);
+                        new KotlinIsoVisitor<Integer>() {
+                            @Override
+                            public J.MemberReference visitMemberReference(J.MemberReference memberRef, Integer integer) {
+                                if ("A".equals(memberRef.getReference().getSimpleName())) {
+                                    assertThat(memberRef.getMethodType().toString()).isEqualTo("A{name=<constructor>,return=A,parameters=[kotlin.Function1<kotlin.Function1<kotlin.Any, A>, A>]}");
+                                    found.set(true);
+                                }
+                                return super.visitMemberReference(memberRef, integer);
                             }
-                            return super.visitMemberReference(memberRef, integer);
-                        }
-                    }.visit(cu, 0);
-                    assertThat(found.get()).isTrue();
-                })
+                        }.visit(cu, 0);
+                        assertThat(found.get()).isTrue();
+                    })
               )
             );
         }
@@ -1615,7 +1670,7 @@ public class KotlinTypeMappingTest {
                   val x = A.B.A.C()
                   """,
                 spec -> spec.afterRecipe(cu -> {
-                      AtomicInteger count = new AtomicInteger(0);
+                      var count = new AtomicInteger(0);
                       new KotlinIsoVisitor<Integer>() {
                           @Override
                           public J.FieldAccess visitFieldAccess(J.FieldAccess fieldAccess, Integer n) {
@@ -1663,7 +1718,7 @@ public class KotlinTypeMappingTest {
               kotlin(
                 "val x = foo.bar.A.B.A.C<String>()",
                 spec -> spec.afterRecipe(cu -> {
-                      AtomicInteger count = new AtomicInteger(0);
+                      var count = new AtomicInteger(0);
                       new KotlinIsoVisitor<Integer>() {
 
                           @Override
@@ -1736,7 +1791,7 @@ public class KotlinTypeMappingTest {
               kotlin(
                 "val x = foo.bar.A()",
                 spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
+                    var found = new AtomicBoolean(false);
                     new KotlinIsoVisitor<Integer>() {
                         @Override
                         public J.FieldAccess visitFieldAccess(J.FieldAccess fieldAccess, Integer n) {
@@ -1754,8 +1809,8 @@ public class KotlinTypeMappingTest {
             );
         }
 
-        @Test
         @Issue("https://github.com/openrewrite/rewrite-kotlin/issues/590")
+        @Test
         void callWithDefaultedGenericParameters() {
             rewriteRun(
               kotlin(
@@ -1767,7 +1822,7 @@ public class KotlinTypeMappingTest {
                   }
                   """,
                 spec -> spec.afterRecipe(cu -> {
-                    AtomicBoolean found = new AtomicBoolean(false);
+                    var found = new AtomicBoolean(false);
                     new KotlinIsoVisitor<Integer>() {
                         @Override
                         public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, Integer integer) {
