@@ -18,8 +18,10 @@ package org.openrewrite.kotlin.tree;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
+import org.openrewrite.ExecutionContext;
 import org.openrewrite.Issue;
 import org.openrewrite.java.tree.J;
+import org.openrewrite.kotlin.KotlinIsoVisitor;
 import org.openrewrite.kotlin.KotlinParser;
 import org.openrewrite.test.RewriteTest;
 import org.openrewrite.test.TypeValidation;
@@ -28,6 +30,7 @@ import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.openrewrite.kotlin.Assertions.kotlin;
+import static org.openrewrite.test.RewriteTest.toRecipe;
 
 @SuppressWarnings({"RedundantSuppression", "RedundantNullableReturnType", "RedundantVisibilityModifier", "UnusedReceiverParameter", "SortModifiers", "TrailingComma", "RedundantGetter", "RedundantSetter"})
 class AnnotationTest implements RewriteTest {
@@ -54,7 +57,8 @@ class AnnotationTest implements RewriteTest {
               @Target(AnnotationTarget.FILE)
               @Retention(AnnotationRetention.SOURCE)
               annotation class Anno
-              """),
+              """
+          ),
           kotlin(
             //language=none
             """
@@ -108,7 +112,7 @@ class AnnotationTest implements RewriteTest {
               }
               """,
             spec -> spec.afterRecipe(cu -> {
-                J.VariableDeclarations v = (J.VariableDeclarations) ((J.ClassDeclaration) cu.getStatements().get(2)).getBody().getStatements().get(0);
+                var v = (J.VariableDeclarations) ((J.ClassDeclaration) cu.getStatements().get(2)).getBody().getStatements().getFirst();
                 assertThat(v.getLeadingAnnotations()).hasSize(2);
             })
           )
@@ -123,7 +127,7 @@ class AnnotationTest implements RewriteTest {
               @Target (  AnnotationTarget . PROPERTY   )
               @Retention  ( AnnotationRetention . SOURCE )
               annotation class Anno ( val values : Array <  String > )
-              
+
               @Anno( values =  [   "a"    ,     "b" ,  "c"   ]    )
               val a = 42
               """
@@ -311,7 +315,7 @@ class AnnotationTest implements RewriteTest {
           kotlin(
             """
               annotation class Anno
-              
+
               class Example {
                   @setparam : Anno
                   @set: Anno
@@ -329,7 +333,7 @@ class AnnotationTest implements RewriteTest {
             """
               @file:Suppress("UNUSED_VARIABLE")
               annotation class Anno
-              
+
               fun example ( ) {
                 val (  @Anno   a , @Anno b , @Anno c ) = Triple ( 1 , 2 , 3 )
               }
@@ -362,7 +366,7 @@ class AnnotationTest implements RewriteTest {
               )
               @Retention(AnnotationRetention.SOURCE)
               annotation class Ann
-              
+
               @Suppress("RedundantSetter","RedundantSuppression")
               @Ann
               open class Test < @Ann in Number > ( @Ann val s : String ) {
@@ -371,7 +375,7 @@ class AnnotationTest implements RewriteTest {
                       @Ann set ( @Ann value ) {
                           field = value
                       }
-              
+
                   @Ann inline fun < @Ann reified T > m ( @Ann s : @Ann String ) : String {
                       @Ann return (@Ann s)
                   }
@@ -395,10 +399,10 @@ class AnnotationTest implements RewriteTest {
               @A open  @B   internal    @C @LAST  class Foo
               """,
             spec -> spec.afterRecipe(cu -> {
-                J.ClassDeclaration last = (J.ClassDeclaration) cu.getStatements().get(cu.getStatements().size() - 1);
+                var last = (J.ClassDeclaration) cu.getStatements().get(cu.getStatements().size() - 1);
                 List<J.Annotation> annotationList = last.getPadding().getKind().getAnnotations();
                 assertThat(annotationList).hasSize(2);
-                assertThat(annotationList.get(0).getSimpleName()).isEqualTo("C");
+                assertThat(annotationList.getFirst().getSimpleName()).isEqualTo("C");
                 assertThat(annotationList.get(1).getSimpleName()).isEqualTo("LAST");
             })
           )
@@ -413,7 +417,7 @@ class AnnotationTest implements RewriteTest {
               @Target(AnnotationTarget.EXPRESSION)
               @Retention(AnnotationRetention.SOURCE)
               annotation class Anno
-              
+
               fun method ( ) {
                   val list = listOf ( 1 , 2 , 3 )
                   list  .  filterIndexed { index  ,   _    -> @Anno  index   %    2 == 0 }
@@ -423,8 +427,8 @@ class AnnotationTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite-kotlin/issues/267")
+    @Test
     void expressionAnnotationInsideLambda() {
         rewriteRun(
           kotlin(
@@ -529,7 +533,7 @@ class AnnotationTest implements RewriteTest {
               @Target(AnnotationTarget.TYPE)
               @Retention(AnnotationRetention.SOURCE)
               annotation class Anno
-              
+
               class Foo(
                 private val option:  @Anno   () -> Unit
               )
@@ -567,11 +571,11 @@ class AnnotationTest implements RewriteTest {
               @Target(AnnotationTarget.FIELD)
               @Retention(AnnotationRetention.SOURCE)
               annotation class A1
-              
+
               @Target(AnnotationTarget.FIELD)
               @Retention(AnnotationRetention.SOURCE)
               annotation class A2 (val name: String)
-              
+
               class Test {
                   @field :  [   A1    A2 (  "numberfield "   )    ]
                   var field: Long = 0
@@ -776,6 +780,42 @@ class AnnotationTest implements RewriteTest {
               annotation class Anno
               fun method ( ) {
                   val lambda : suspend (   @Anno Int ) -> Int = { number : Int -> number * number }
+              }
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/issues/6868")
+    @Test
+    void visitAnnotatedExpressionTraversesInnerExpression() {
+        rewriteRun(
+          spec -> spec
+            .recipe(toRecipe(() -> new KotlinIsoVisitor<>() {
+                @Override
+                public J.MethodInvocation visitMethodInvocation(J.MethodInvocation method, ExecutionContext ctx) {
+                    if ("foo".equals(method.getSimpleName())) {
+                        return method.withName(method.getName().withSimpleName("bar"));
+                    }
+                    return super.visitMethodInvocation(method, ctx);
+                }
+            }))
+            .typeValidationOptions(TypeValidation.none()),
+          kotlin(
+            """
+              fun main() {
+                  @Suppress("UNCHECKED_CAST")
+                  try {
+                      foo()
+                  } catch (e: Exception) {}
+              }
+              """,
+            """
+              fun main() {
+                  @Suppress("UNCHECKED_CAST")
+                  try {
+                      bar()
+                  } catch (e: Exception) {}
               }
               """
           )
