@@ -20,6 +20,8 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.CsvSource;
 import org.openrewrite.Issue;
 import org.openrewrite.java.tree.J;
+import org.openrewrite.java.tree.JavaType;
+import org.openrewrite.java.tree.TypeUtils;
 import org.openrewrite.kotlin.KotlinIsoVisitor;
 import org.openrewrite.test.RewriteTest;
 
@@ -43,11 +45,11 @@ class ImportTest implements RewriteTest {
         );
     }
 
-    @ParameterizedTest
     @CsvSource({
       "import kotlin.collections.List,false",
       "import java.util.regex.Pattern.CASE_INSENSITIVE,true",
     })
+    @ParameterizedTest
     void staticImports(String _import, Boolean isStatic) {
         rewriteRun(
           kotlin("%s".formatted(_import),
@@ -83,7 +85,7 @@ class ImportTest implements RewriteTest {
           kotlin(
             """
               import a.b.method
-              
+
               class A
               """
           )
@@ -98,7 +100,7 @@ class ImportTest implements RewriteTest {
           kotlin(
             "import   createInstance /*C1*/",
             spec -> spec.afterRecipe(cu -> {
-                assertThat(cu.getImports().get(0).getPackageName()).isEmpty();
+                assertThat(cu.getImports().getFirst().getPackageName()).isEmpty();
             })
           )
         );
@@ -111,9 +113,10 @@ class ImportTest implements RewriteTest {
             """
               import kotlin.collections.List as L
               import kotlin.collections.Set as S
-              
+
               class T
-              """)
+              """
+          )
         );
     }
 
@@ -136,7 +139,7 @@ class ImportTest implements RewriteTest {
           kotlin(
             """
               import kotlin . collections . List ;
-              
+
               class T
               """
           )
@@ -151,9 +154,10 @@ class ImportTest implements RewriteTest {
           kotlin(
             """
               import Foo as Bar
-              
+
               class Test
-              """)
+              """
+          )
         );
     }
 
@@ -164,7 +168,8 @@ class ImportTest implements RewriteTest {
           kotlin(
             """
               import org.`should be equal to`
-              """)
+              """
+          )
         );
     }
 
@@ -176,6 +181,47 @@ class ImportTest implements RewriteTest {
             """
               import my.org.`$x`
               """
+          )
+        );
+    }
+
+    @Test
+    void interfaceInformation() {
+        rewriteRun(
+          kotlin(
+            """
+              package org.example
+              interface SuperShared {
+                  fun one() = "one"
+              }
+              interface Shared : SuperShared
+              class A {
+                  companion object : Shared
+              }
+              """
+          ),
+          kotlin(
+            """
+              import org.example.A.Companion.one
+              """,
+            spec -> spec.afterRecipe(cu -> {
+                JavaType firstImportType = cu.getImports().getFirst().getQualid().getType();
+                JavaType.FullyQualified fullyQualified = TypeUtils.asFullyQualified(firstImportType);
+
+                //noinspection DataFlowIssue
+                assertThat(fullyQualified.getOwningClass().getInterfaces())
+                  .singleElement()
+                  .satisfies(sharedInterface -> {
+                      assertThat(sharedInterface.getFullyQualifiedName()).isEqualTo("org.example.Shared");
+                      assertThat(sharedInterface.getInterfaces())
+                        .singleElement()
+                        .satisfies(it -> {
+                            assertThat(it.getFullyQualifiedName()).isEqualTo("org.example.SuperShared");
+                            assertThat(it.getMethods()).singleElement().extracting(JavaType.Method::getName).isEqualTo("one");
+                        });
+                  });
+              }
+            )
           )
         );
     }
