@@ -22,15 +22,15 @@ import org.openrewrite.ExecutionContext;
 import org.openrewrite.InMemoryExecutionContext;
 import org.openrewrite.SourceFile;
 import org.openrewrite.maven.MavenParser;
-import org.openrewrite.maven.tree.MavenResolutionResult;
-import org.openrewrite.maven.tree.ResolvedDependency;
-import org.openrewrite.maven.tree.ResolvedGroupArtifactVersion;
-import org.openrewrite.maven.tree.Scope;
+import org.openrewrite.maven.tree.*;
 
 import java.io.ByteArrayInputStream;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.List;
 
+import static java.util.Collections.emptyList;
 import static org.assertj.core.api.Assertions.assertThat;
 
 class LocalMavenArtifactCacheTest {
@@ -57,6 +57,101 @@ class LocalMavenArtifactCacheTest {
         assertThat(tempDir).isEmptyDirectory();
     }
 
+    @Test
+    void nonDatedSnapshotIsAlwaysRefreshed(@TempDir Path tempDir) throws Exception {
+        cache = new LocalMavenArtifactCache(tempDir);
+        ResolvedDependency snapshot = snapshotDependency();
+
+        // First install: cache the artifact
+        Path first = cache.computeArtifact(snapshot,
+                () -> new ByteArrayInputStream("v1".getBytes(StandardCharsets.UTF_8)),
+                Throwable::printStackTrace);
+        assertThat(first).exists();
+        assertThat(Files.readString(first)).isEqualTo("v1");
+
+        // Second install with updated content: should overwrite the cached file
+        Path second = cache.computeArtifact(snapshot,
+                () -> new ByteArrayInputStream("v2".getBytes(StandardCharsets.UTF_8)),
+                Throwable::printStackTrace);
+        assertThat(second).exists();
+        assertThat(second).isEqualTo(first);
+        assertThat(Files.readString(second)).isEqualTo("v2");
+    }
+
+    @Test
+    void snapshotSuffixedDatedVersionIsAlwaysRefreshed(@TempDir Path tempDir) throws Exception {
+        cache = new LocalMavenArtifactCache(tempDir);
+        // Simulates a bug where datedSnapshotVersion is set to the SNAPSHOT version string
+        // instead of null — should still be treated as mutable
+        ResolvedDependency snapshot = ResolvedDependency.builder()
+                .gav(new ResolvedGroupArtifactVersion(null, "org.example", "my-recipes",
+                        "1.0.0-SNAPSHOT", "1.0.0-SNAPSHOT"))
+                .requested(Dependency.builder()
+                        .gav(new GroupArtifactVersion("org.example", "my-recipes", "1.0.0-SNAPSHOT"))
+                        .build())
+                .dependencies(emptyList())
+                .licenses(emptyList())
+                .depth(0)
+                .build();
+
+        Path first = cache.computeArtifact(snapshot,
+                () -> new ByteArrayInputStream("v1".getBytes(StandardCharsets.UTF_8)),
+                Throwable::printStackTrace);
+        assertThat(first).exists();
+        assertThat(Files.readString(first)).isEqualTo("v1");
+
+        Path second = cache.computeArtifact(snapshot,
+                () -> new ByteArrayInputStream("v2".getBytes(StandardCharsets.UTF_8)),
+                Throwable::printStackTrace);
+        assertThat(second).isEqualTo(first);
+        assertThat(Files.readString(second)).isEqualTo("v2");
+    }
+
+    @Test
+    void datedSnapshotIsNotRefreshed(@TempDir Path tempDir) throws Exception {
+        cache = new LocalMavenArtifactCache(tempDir);
+        ResolvedDependency dated = datedSnapshotDependency();
+
+        // First install
+        Path first = cache.computeArtifact(dated,
+                () -> new ByteArrayInputStream("v1".getBytes(StandardCharsets.UTF_8)),
+                Throwable::printStackTrace);
+        assertThat(first).exists();
+        assertThat(Files.readString(first)).isEqualTo("v1");
+
+        // Second install: should return cached file without re-downloading
+        Path second = cache.computeArtifact(dated,
+                () -> new ByteArrayInputStream("v2".getBytes(StandardCharsets.UTF_8)),
+                Throwable::printStackTrace);
+        assertThat(second).isEqualTo(first);
+        assertThat(Files.readString(second)).isEqualTo("v1");
+    }
+
+    private static ResolvedDependency snapshotDependency() {
+        return ResolvedDependency.builder()
+                .gav(new ResolvedGroupArtifactVersion(null, "org.example", "my-recipes", "1.0.0-SNAPSHOT", null))
+                .requested(Dependency.builder()
+                        .gav(new GroupArtifactVersion("org.example", "my-recipes", "1.0.0-SNAPSHOT"))
+                        .build())
+                .dependencies(emptyList())
+                .licenses(emptyList())
+                .depth(0)
+                .build();
+    }
+
+    private static ResolvedDependency datedSnapshotDependency() {
+        return ResolvedDependency.builder()
+                .gav(new ResolvedGroupArtifactVersion("https://repo.example.com", "org.example", "my-recipes",
+                        "1.0.0-SNAPSHOT", "1.0.0-20260128.120000-1"))
+                .requested(Dependency.builder()
+                        .gav(new GroupArtifactVersion("org.example", "my-recipes", "1.0.0-SNAPSHOT"))
+                        .build())
+                .dependencies(emptyList())
+                .licenses(emptyList())
+                .depth(0)
+                .build();
+    }
+
     private static ResolvedDependency findDependency() {
         ExecutionContext ctx = new InMemoryExecutionContext(Throwable::printStackTrace);
         ResolvedGroupArtifactVersion recipeGav = new ResolvedGroupArtifactVersion(
@@ -67,9 +162,7 @@ class LocalMavenArtifactCacheTest {
 
         MavenParser mavenParser = MavenParser.builder().build();
         SourceFile parsed = mavenParser.parse(ctx,
-          String.format(
-            //language=xml
-            """
+                """
               <project>
                   <groupId>org.openrewrite</groupId>
                   <artifactId>maven-downloader-test</artifactId>
@@ -82,12 +175,12 @@ class LocalMavenArtifactCacheTest {
                       </dependency>
                   </dependencies>
               </project>
-              """.formatted(recipeGav.getGroupId(), recipeGav.getArtifactId(), recipeGav.getVersion()))
+              """.formatted(recipeGav.getGroupId(), recipeGav.getArtifactId(), recipeGav.getVersion()).formatted()
         ).findFirst().orElseThrow(() -> new IllegalArgumentException("Could not parse as XML"));
 
         MavenResolutionResult mavenModel = parsed.getMarkers().findFirst(MavenResolutionResult.class).orElseThrow();
         assertThat(mavenModel.getDependencies()).isNotEmpty();
         List<ResolvedDependency> runtimeDependencies = mavenModel.getDependencies().get(Scope.Runtime);
-        return runtimeDependencies.get(0);
+        return runtimeDependencies.getFirst();
     }
 }
