@@ -22,6 +22,7 @@ import org.junit.jupiter.params.provider.ValueSource;
 import org.openrewrite.Issue;
 import org.openrewrite.SourceFile;
 import org.openrewrite.test.RewriteTest;
+import org.openrewrite.test.SourceSpec;
 import org.openrewrite.tree.ParseError;
 import org.openrewrite.yaml.tree.Yaml;
 
@@ -39,16 +40,16 @@ class YamlParserTest implements RewriteTest {
         List<SourceFile> yamlSources = YamlParser.builder().build().parse("a: b\n").toList();
         assertThat(yamlSources).singleElement().isInstanceOf(Yaml.Documents.class);
 
-        Yaml.Documents documents = (Yaml.Documents) yamlSources.get(0);
-        Yaml.Document document = documents.getDocuments().get(0);
+        var documents = (Yaml.Documents) yamlSources.getFirst();
+        Yaml.Document document = documents.getDocuments().getFirst();
 
         // Assert that end is parsed correctly
         assertThat(document.getEnd().getPrefix()).isEqualTo("\n");
 
         // Assert that the title is parsed correctly
-        Yaml.Mapping mapping = (Yaml.Mapping) document.getBlock();
-        Yaml.Mapping.Entry entry = mapping.getEntries().get(0);
-        Yaml.Scalar title = (Yaml.Scalar) entry.getValue();
+        var mapping = (Yaml.Mapping) document.getBlock();
+        Yaml.Mapping.Entry entry = mapping.getEntries().getFirst();
+        var title = (Yaml.Scalar) entry.getValue();
         assertThat(title.getValue()).isEqualTo("b");
     }
 
@@ -66,8 +67,8 @@ class YamlParserTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/4176")
+    @Test
     void listsAndListsOfLists() {
         rewriteRun(
           yaml(
@@ -105,8 +106,8 @@ class YamlParserTest implements RewriteTest {
         );
     }
 
-    @SuppressWarnings("OptionalGetWithoutIsPresent")
     @ParameterizedTest
+    @SuppressWarnings("OptionalGetWithoutIsPresent")
     @ValueSource(strings = {
       "b",
       " 🛠",
@@ -121,13 +122,13 @@ class YamlParserTest implements RewriteTest {
         SourceFile sourceFile = yamlSources.findFirst().get();
         assertThat(sourceFile).isNotInstanceOf(ParseError.class);
 
-        Yaml.Documents documents = (Yaml.Documents) sourceFile;
-        Yaml.Document document = documents.getDocuments().get(0);
+        var documents = (Yaml.Documents) sourceFile;
+        Yaml.Document document = documents.getDocuments().getFirst();
 
         // Assert that end is parsed correctly
-        Yaml.Mapping mapping = (Yaml.Mapping) document.getBlock();
-        Yaml.Mapping.Entry entry = mapping.getEntries().get(0);
-        Yaml.Scalar title = (Yaml.Scalar) entry.getValue();
+        var mapping = (Yaml.Mapping) document.getBlock();
+        Yaml.Mapping.Entry entry = mapping.getEntries().getFirst();
+        var title = (Yaml.Scalar) entry.getValue();
         assertThat(title.getValue()).isEqualTo(input.trim());
     }
 
@@ -234,6 +235,37 @@ class YamlParserTest implements RewriteTest {
         );
     }
 
+    @Issue("https://github.com/moderneinc/customer-requests/issues/1463")
+    @Test
+    void asteriskPlaceholders() {
+        rewriteRun(
+          yaml(
+            """
+              database:
+                password: *** REMOVED ***
+                apiKey: **REDACTED**
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/1463")
+    @Test
+    void asteriskPlaceholdersWithAnchors() {
+        // Ensure real anchors/aliases still work alongside asterisk placeholders
+        rewriteRun(
+          yaml(
+            """
+              defaults: &defaults
+                timeout: 30
+              production:
+                <<: *defaults
+                password: *** REMOVED ***
+              """
+          )
+        );
+    }
+
     @Test
     void pipeLiteralInASequenceWithDoubleQuotes() {
         rewriteRun(
@@ -281,6 +313,19 @@ class YamlParserTest implements RewriteTest {
         );
     }
 
+    @Issue("https://github.com/openrewrite/rewrite/issues/5179")
+    @Test
+    void tagsInSequences() {
+        rewriteRun(
+          yaml(
+            """
+            Conditions:
+              IsPollingFrequencyInMinutesSingular: !Equals [!Ref PollingFrequencyInMinutes, 1]
+            """
+          )
+        );
+    }
+
     @Test
     void globalTags() {
         rewriteRun(
@@ -311,14 +356,14 @@ class YamlParserTest implements RewriteTest {
           """;
 
         // when
-        Yaml.Documents parsed = (Yaml.Documents) YamlParser.builder().build().parse(code).toList().get(0);
+        var parsed = (Yaml.Documents) YamlParser.builder().build().parse(code).toList().getFirst();
 
         // test
-        Yaml.Document document = parsed.getDocuments().get(0);
-        Yaml.Mapping topMapping = (Yaml.Mapping) document.getBlock();
-        Yaml.Mapping.Entry person = topMapping.getEntries().get(0);
+        Yaml.Document document = parsed.getDocuments().getFirst();
+        var topMapping = (Yaml.Mapping) document.getBlock();
+        Yaml.Mapping.Entry person = topMapping.getEntries().getFirst();
         assertEquals("person", person.getKey().getValue());
-        Yaml.Mapping withinPerson = (Yaml.Mapping) person.getValue();
+        var withinPerson = (Yaml.Mapping) person.getValue();
         assertEquals("map", withinPerson.getTag().getName());
         assertEquals(Yaml.Tag.Kind.IMPLICIT_GLOBAL, withinPerson.getTag().getKind());
     }
@@ -349,7 +394,8 @@ class YamlParserTest implements RewriteTest {
             - name: Elephant
             - #🦍COMMENT: unicode
             - action: Do something
-            """)
+            """
+          )
         );
     }
 
@@ -361,7 +407,8 @@ class YamlParserTest implements RewriteTest {
             - name: Elephant
             - #🦍COMMENT: 🐶unicode
             - action: Do something
-            """)
+            """
+          )
         );
     }
 
@@ -373,7 +420,8 @@ class YamlParserTest implements RewriteTest {
             - name: Elephant
             - #COMMENT: unicode
             - action: Do something
-            """)
+            """
+          )
         );
     }
 
@@ -387,7 +435,8 @@ class YamlParserTest implements RewriteTest {
             - color: Black
             - #🦍COMMENT: unicode
             - action: Escape
-            """)
+            """
+          )
         );
     }
 
@@ -401,7 +450,398 @@ class YamlParserTest implements RewriteTest {
             - color: Black
             - #🦍COMMENT: 🎱unicode
             - action: Escape
-            """)
+            """
+          )
+        );
+    }
+
+    @Test
+    void withAnchorScalar() {
+        rewriteRun(
+          yaml(
+            """
+              anchored_content: &anchor_name This string will appear as the value.
+              other_anchor: *anchor_name
+              """
+          )
+        );
+    }
+
+    @Test
+    void withAnchorMap() {
+        rewriteRun(
+          yaml(
+            """
+              anchored_content: &anchor_name
+                anchor_key: 1
+                another_anchor_key: 2
+              other_anchor: *anchor_name
+              """
+          )
+        );
+    }
+
+    @Test
+    void withAnchorSequence() {
+        rewriteRun(
+          yaml(
+            """
+              anchored_content: &anchor
+                - item1
+                - item2
+              other_anchor: *anchor
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/openrewrite/rewrite/issues/5553")
+    @Test
+    void withAnchorSequenceOnRootLevel() {
+        rewriteRun(
+          yaml(
+            """
+              anchored_content: &anchor
+              - item1
+              - item2
+              other_anchor: *anchor
+              """
+          )
+        );
+    }
+
+    @Test
+    void parseTagsCorrectlyOnFirstLineOfMappingEntry() {
+        rewriteRun(
+          yaml(
+            """
+              - !SOMETAG
+                a: b
+              """,
+            spec -> spec.afterRecipe(docs -> {
+                var sequence = (Yaml.Sequence) docs.getDocuments().getFirst().getBlock();
+                var mapping = (Yaml.Mapping) sequence.getEntries().getFirst().getBlock();
+                assertThat(mapping.getTag().getName()).isEqualTo("SOMETAG");
+            })
+          )
+        );
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/1471")
+    @Test
+    void yamlWithDocumentEndMarker() {
+        rewriteRun(
+          yaml(
+            """
+              ---
+              applications:
+                - name: modified-app-name
+                  memory: 1G
+              ...
+              """,
+            SourceSpec::noTrim
+          )
+        );
+    }
+
+    @Test
+    void helmTemplateMatchingDocumentEndParsesCorrectly() {
+        rewriteRun(
+          yaml(
+            """
+              # ${{ looks.like.helm.before }}
+              jobs:
+                # ${{ looks.like.helm.middle }}
+                steps:
+                  # ${{ looks.like.helm.sequence }}
+                  - items1: []
+                  # ${{ looks.like.helm.in-sequence }}
+                  - items2: []
+                  # ${{ looks.like.helm.end-sequence }}
+              # ${{ looks.like.helm.end }}
+              """
+          ),
+          yaml(
+            """
+              jobs:
+                steps:
+                  - items1: []
+                  # ${{ looks.like.helm.sequence }}
+                  - items2: []
+              """
+          ),
+          yaml(
+            """
+              jobs:
+                steps:
+                  # ${{ looks.like.helm.sequence }}
+                  - items1: []
+                  - items2: []
+              """
+          ),
+          yaml(
+            """
+              jobs:
+                steps:
+                  - items1: []
+                  - items2: []
+              # ${{ looks.like.helm.end }}
+              """
+          )
+        );
+    }
+
+    @Test
+    void flowStyleMappingsInSequences() {
+        rewriteRun(
+          yaml(
+            """
+              tasks:
+                - {"task_type": "Shell"}
+                - { "task_type": "Shell2"}
+              """
+          ),
+          yaml(
+            """
+              items:
+                - name: block-style
+                  type: mapping
+                - {"name": "flow-style", "type": "mapping"}
+                - key: another-block
+              """
+          ),
+          yaml(
+            """
+              items:
+                - {}
+                - {"key": "value"}
+              """
+          ),
+          yaml(
+            """
+              data:
+                - {"list": [1, 2, 3], "map": {"nested": "value"}}
+                - {"array": [{"inner": "map"}]}
+              """
+          ),
+          yaml(
+            """
+              items:
+                - {
+                    "key": "value",
+                    "another": "test"
+                  }
+              """
+          ),
+          yaml(
+            """
+              items:
+                - {"key": "value",}
+              """
+          ),
+          yaml(
+            """
+              defaults: &defaults {"type": "default", "enabled": true}
+              items:
+                - *defaults
+                - {"type": "custom"}
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/850")
+    @Test
+    void anchorInSequencePreservesDash() {
+        rewriteRun(
+          yaml(
+            """
+              generalTasks:
+              - &createTask
+                name: createTask
+                type: manipulator
+                stereoType: creater
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/850")
+    @Test
+    void anchorInSequenceAtRootLevel() {
+        // The issue shows:
+        // generalTasks:
+        // - &createTask   <- dash being removed
+        // This tests anchor on a sequence entry at root level
+        rewriteRun(
+          yaml(
+            """
+              generalTasks:
+              - &createTask
+                name: createTask
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/850")
+    @Test
+    void emptyYamlFileWithNewline() {
+        // File containing just a single newline should preserve it
+        rewriteRun(
+          yaml(
+            "\n",
+            SourceSpec::noTrim
+          )
+        );
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/850")
+    @Test
+    void emptyYamlFileWithMultipleNewlines() {
+        // File containing multiple newlines should preserve them
+        rewriteRun(
+          yaml(
+            "\n\n\n",
+            SourceSpec::noTrim
+          )
+        );
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/850")
+    @Test
+    void flowStyleJsonLikeSequence() {
+        // Issue: Colons being added out of the blue in JSON-like flow content
+        // application/json:
+        //   {
+        //     "MV7",    <- becomes "MV7":,
+        //     "7J04"    <- becomes "7J04":
+        //   }
+        rewriteRun(
+          yaml(
+            """
+              example:
+                application/json:
+                  {
+                    "MV7",
+                    "7J04"
+                  }
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/850")
+    @Test
+    void singleBraceTemplateSyntaxQuoted() {
+        // Single-brace placeholders like {C App} look like flow mapping start
+        // When quoted, it's valid YAML
+        rewriteRun(
+          yaml(
+            """
+              swagger: '2.0'
+              host: "{C App}.colruyt.int/{C App}"
+              """
+          )
+        );
+    }
+
+    @Issue("https://github.com/moderneinc/customer-requests/issues/850")
+    @Test
+    void singleBraceTemplateSyntaxUnquoted() {
+        // Unquoted {C App} looks like flow mapping start but should be handled
+        // as a placeholder template, similar to Helm templates
+        rewriteRun(
+          yaml(
+            """
+              swagger: '2.0'
+              host: {C App}.colruyt.int/{C App}
+              """
+          )
+        );
+    }
+
+    @Test
+    void anchorOnMappingInSequenceEntry() {
+        rewriteRun(
+          yaml(
+            """
+              - k: v
+              - &b
+                k2: v2
+              """
+          )
+        );
+    }
+
+    @Test
+    void literalScalarTrailingNewlineInValue() {
+        // Literal (|) and folded (>) scalars should keep trailing newlines in their value
+        // The next entry's prefix should be just indentation, not include the newline
+        rewriteRun(
+          yaml(
+            """
+              parent:
+                message: |
+                  line1
+                  line2
+                next: value
+              """,
+            spec -> spec.afterRecipe(docs -> new YamlIsoVisitor<Integer>() {
+                @Override
+                public Yaml.Scalar visitScalar(Yaml.Scalar scalar, Integer ctx) {
+                    if (scalar.getStyle() == Yaml.Scalar.Style.LITERAL) {
+                        // Literal scalar value should end with newline
+                        assertThat(scalar.getValue()).endsWith("\n");
+                    }
+                    return super.visitScalar(scalar, ctx);
+                }
+
+                @Override
+                public Yaml.Mapping.Entry visitMappingEntry(Yaml.Mapping.Entry entry, Integer ctx) {
+                    if ("next".equals(entry.getKey().getValue())) {
+                        // Entry following literal scalar has prefix with just indentation (no leading newline)
+                        assertThat(entry.getPrefix()).isEqualTo("  ");
+                    }
+                    return super.visitMappingEntry(entry, ctx);
+                }
+            }.visit(docs, 0))
+          )
+        );
+    }
+
+    @Test
+    void foldedScalarTrailingNewlineInValue() {
+        // Folded (>) scalars should also keep trailing newlines in their value
+        rewriteRun(
+          yaml(
+            """
+              parent:
+                description: >
+                  This is a folded
+                  multiline string.
+                status: active
+              """,
+            spec -> spec.afterRecipe(docs -> new YamlIsoVisitor<Integer>() {
+                @Override
+                public Yaml.Scalar visitScalar(Yaml.Scalar scalar, Integer ctx) {
+                    if (scalar.getStyle() == Yaml.Scalar.Style.FOLDED) {
+                        // Folded scalar value should end with newline
+                        assertThat(scalar.getValue()).endsWith("\n");
+                    }
+                    return super.visitScalar(scalar, ctx);
+                }
+
+                @Override
+                public Yaml.Mapping.Entry visitMappingEntry(Yaml.Mapping.Entry entry, Integer ctx) {
+                    if ("status".equals(entry.getKey().getValue())) {
+                        // Entry following folded scalar has prefix with just indentation (no leading newline)
+                        assertThat(entry.getPrefix()).isEqualTo("  ");
+                    }
+                    return super.visitMappingEntry(entry, ctx);
+                }
+            }.visit(docs, 0))
+          )
         );
     }
 }
